image was broken, replacing with a pic of ᏍᎥᏃᏱᎡᎯᏅᏙ

--- a/ᏒᏃᏱ.mw
+++ b/ᏒᏃᏱ.mw
@@ -13,7 +13,7 @@
 
 == ᎠᎾᏓᏟᏏᏍᎬ ᎢᎦᏛ ==
 
-ᏂᎦᏅᎯᏒ ᎯᎠ ᎠᏣᏪᏐᎸᏍᏙᏗ ᎧᏃᎮᏍᎩ, ᏒᏃᏱ ᎤᎭ ᎢᎬᏱᏗᏢ ᏭᏪᏙᎢ ᎢᏳᏩᎪᏗ ᎠᏣᏪᏐᎸᏍᏗᏍᎬ ᎠᎴ [[ᎦᎸᏗ]] ᎾᏍᎩᎾᎢ ᎠᏂᏴᏫ, ᎣᏂ ᏧᏩᎫᏛ ᎤᏍᏗ ᏗᎦᎸᏫᏍᏓᏁᏗ ᎠᎴ ᏗᎦᎸᏫᏍᏓᏁᏗ ᏰᎵᏇ ᎾᏍᏋ ᎠᏍᏆᏛᎯ ᎭᏫᎾᏗᏢ ᎯᎠ ᎤᎳᏏᎩ. ᎾᎿ ᎯᎠ ᏐᎢ ᎤᏬᏰᏂ, ᎤᏍᎦᏎᏗ ᎠᏓᎸᎾᏍᏗ activities ᏯᏛᎿ ᏥᏄᏍᏗ ᎪᎱᏍᏗ ᏄᏰᎳᏛᎾ ᎠᎴ ᎠᏍᎦᏅᏨ ᏧᏩᏚᏃᎯ.[[File:MATTTREVITHICKBW.JPG|thumb|200px|left| ᏧᏍᏈᏯ ᏧᎸᏫᏍᏓᏁᎯ ᎦᎳᏅᏛ ᎾᎾᎢ ᏒᏃᏱ]] ᏥᏄᏍᏗ ᏗᏟᎶᏍᏔᏅ [[ᎠᏨᏍᏛᏍᎬ]] ᎤᎭ ᎪᏢᎯᏌᏅ, ᏒᏃᏱ-ᎢᏳᏩᎪᏗ ᎠᎵᏂᎬᏁᏗᎢ ᎤᎭ ᎤᏁᏉᏨᎯ ᎠᎴ ᏗᏙᎳᎩ ᎦᏛᎬᎢ ᎢᎦᏛ ᎯᎠ [[ᎠᎵᏏᏅᏙᏗ]] ᎭᏫᎾᏗᏢ ᎤᎪᏗᏗ ᏚᏙᏢᏒᎢ.
+ᏂᎦᏅᎯᏒ ᎯᎠ ᎠᏣᏪᏐᎸᏍᏙᏗ ᎧᏃᎮᏍᎩ, ᏒᏃᏱ ᎤᎭ ᎢᎬᏱᏗᏢ ᏭᏪᏙᎢ ᎢᏳᏩᎪᏗ ᎠᏣᏪᏐᎸᏍᏗᏍᎬ ᎠᎴ [[ᎦᎸᏗ]] ᎾᏍᎩᎾᎢ ᎠᏂᏴᏫ, ᎣᏂ ᏧᏩᎫᏛ ᎤᏍᏗ ᏗᎦᎸᏫᏍᏓᏁᏗ ᎠᎴ ᏗᎦᎸᏫᏍᏓᏁᏗ ᏰᎵᏇ ᎾᏍᏋ ᎠᏍᏆᏛᎯ ᎭᏫᎾᏗᏢ ᎯᎠ ᎤᎳᏏᎩ. ᎾᎿ ᎯᎠ ᏐᎢ ᎤᏬᏰᏂ, ᎤᏍᎦᏎᏗ ᎠᏓᎸᎾᏍᏗ activities ᏯᏛᎿ ᏥᏄᏍᏗ ᎪᎱᏍᏗ ᏄᏰᎳᏛᎾ ᎠᎴ ᎠᏍᎦᏅᏨ ᏧᏩᏚᏃᎯ.[[File:Moonshine.JPG|thumb|200px|left| [[ᏍᎥᏃᏱᎡᎯᏅᏙ]]]] ᏥᏄᏍᏗ ᏗᏟᎶᏍᏔᏅ [[ᎠᏨᏍᏛᏍᎬ]] ᎤᎭ ᎪᏢᎯᏌᏅ, ᏒᏃᏱ-ᎢᏳᏩᎪᏗ ᎠᎵᏂᎬᏁᏗᎢ ᎤᎭ ᎤᏁᏉᏨᎯ ᎠᎴ ᏗᏙᎳᎩ ᎦᏛᎬᎢ ᎢᎦᏛ ᎯᎠ [[ᎠᎵᏏᏅᏙᏗ]] ᎭᏫᎾᏗᏢ ᎤᎪᏗᏗ ᏚᏙᏢᏒᎢ.
 
 ᎢᏧᎳᎭ ᏄᏠᏯᏍᏛᎾ ᏗᏟᎶᏍᏔᏅ ᎠᏨᏍᏛ, [[ᏒᏃᏱ ᎡᎯ ᏅᏙ]] ᎠᏨᏍᏛ ᏱᏓᏟᎶᏍᏔᏅ ᏗᎪᏢᏅ ᎾᏍᎩ ᏰᎵᏊ ᎡᏙᎵᏙᎲ ᎠᎴ ᏗᎦᎸᏫᏍᏓᏁᏗ ᏙᏯᏗᏢ ᎾᎾᎢ ᏒᏃᏱ.
 
