--- a/ᏓᏆ.mw
+++ b/ᏓᏆ.mw
@@ -1,38 +1,35 @@
 [[File:Fin whale from air.jpg|thumb|right|300px| [[Fin whale|ᎠᏂᎩᏍᏗ ᏥᏳ ᎤᏔᎾ ᎠᏣᏗ]]]]
-ᎯᎠ ᎠᎴᏂᏍᎬ '''''ᎤᏔᎾ ᎠᏣᏗ''''' ᎨᏒᎢ ᎤᏝᏏᏛ; ᎾᏍᎩ ᏰᎵᏇ ᏩᏎᏍᏗ ᏂᎦᏛ ''[[cetacea]]ns'', ᎣᏍᏛ ᎯᎠ ᎡᏆᎯᎨᏍᏙᏗ ᎠᏂᏏᏴᏫᎭ, ᎠᎴ ᎾᏍᎩ ᎤᏩᏒ ᎠᏁᎳ ᎾᏍᎩᎾ [[Family (biology)|ᎯᎸᏍᎩ ᎢᏯᏓᏁᎸ]] ᎭᏫᏂᏗᏢ ᎯᎠ ᎠᏓᏅᏍᏗ ''Cetacea''. ᎯᎠ ᎣᏂ ᏩᏎᏍᏗ ᏀᎾ ᎨᏒᎢ ᎯᎠ ᏌᏊ ᎠᏍᏓᏩᏛᏓ ᎠᎠᏂ. ᎤᏔᎾ ᎠᏣᏗ ᎾᏍᎩ cetaceans ᎦᏙ ᎤᏍᏗ ᎥᏝ ᎢᏳᏍᏗ [[dolphin|ᎠᎺᏉᎯ]](ᎠᏯ.e. ᎠᏁᎳ ᎯᎠ ᎯᎸᏍᎩ ᎢᏯᏓᏁᎸ [[Oceanic dolphin|Delphinidae]] ᎠᎴ [[River dolphin|Platanistoidea]]) ᎠᎴ ᎾᏍᎩ ᏂᎨᏒᎾ [[porpoise|ᏂᎬᎢ]]. ᎪᎯ ᏰᎵᏇ ᎦᏂ ᎢᎦᏛ ᎤᏦᎠᏎᏗ ᎢᎬᏂᏏᏍᎩ [[Orca]]("ᏗᎯ ᎤᏔᎾ ᎠᏣᏗ") ᎠᎴ [[Pilot whale|ᎠᎳᏫᏔᏗᏍᎩ ᎤᏔᎾ ᎠᏣᏗ]]ᎤᎭ "ᎤᏔᎾ ᎠᏣᏗ" ᎭᏫᎾᏗᏢ ᎤᎾᏤᎵ ᏚᏙᎥ, ᎠᎴ ᎤᏅᏌ ᎠᎺᏉᎯ ᎾᏍᎩᎾᎢ ᎯᎠ ᎤᏰᎸᏛᎢ [[Taxonomy|ᏗᏓᎴᎾᏔᏅ ᏗᎦᏘᏌᏅᎩ]].
+ᎯᎠ ᎠᎴᏂᏍᎬ '''''ᎤᏔᎾ ᎠᏣᏗ''''' ᎨᏒᎢ ᎤᏝᏏᏛ; ᎾᏍᎩ ᏰᎵᏇ ᏩᏎᏍᏗ ᏂᎦᏛ ''[[cetacea]]ns'', ᎣᏍᏛ ᎯᎠ ᎡᏆᎯᎨᏍᏙᏗ ᎠᏂᏏᏴᏫᎭ, ᎠᎴ ᎾᏍᎩ ᎤᏩᏒ ᎠᏁᎳ ᎾᏍᎩᎾ [[Family (biology)|ᎯᎸᏍᎩ ᎢᏯᏓᏁᎸ]] ᎭᏫᏂᏗᏢ ᎯᎠ ᎠᏓᏅᏍᏗ ''Cetacea''. ᎯᎠ ᎣᏂ ᏩᏎᏍᏗ ᏀᎾ ᎨᏒᎢ ᎯᎠ ᏌᏊ ᎠᏍᏓᏩᏛᏓ ᎠᎠᏂ. ᎤᏔᎾ ᎠᏣᏗ ᎾᏍᎩ cetaceans ᎦᏙ ᎤᏍᏗ ᎥᏝ ᎢᏳᏍᏗ [[dolphin|ᎠᎺᏉᎯ]] (i.e. ᎠᏁᎳ ᎯᎠ ᎯᎸᏍᎩ ᎢᏯᏓᏁᎸ [[Oceanic dolphin|Delphinidae]] ᎠᎴ [[River dolphin|Platanistoidea]]) ᎠᎴ ᎾᏍᎩ ᏂᎨᏒᎾ [[porpoise|ᏂᎬᎢ]]. ᎪᎯ ᏰᎵᏇ ᎦᏂ ᎢᎦᏛ ᎤᏦᎠᏎᏗ ᎢᎬᏂᏏᏍᎩ [[Orca]] ("ᏗᎯ ᎤᏔᎾ ᎠᏣᏗ") ᎠᎴ [[Pilot whale|ᎠᎳᏫᏔᏗᏍᎩ ᎤᏔᎾ ᎠᏣᏗ]] ᎤᎭ "ᎤᏔᎾ ᎠᏣᏗ" ᎭᏫᎾᏗᏢ ᎤᎾᏤᎵ ᏚᏙᎥ, ᎠᎴ ᎤᏅᏌ ᎠᎺᏉᎯ ᎾᏍᎩᎾᎢ ᎯᎠ ᎤᏰᎸᏛᎢ [[Taxonomy|ᏗᏓᎴᎾᏔᏅ ᏗᎦᏘᏌᏅᎩ]].
 
 == ᎠᏓᎴᏂᏍᎬ ᎠᎴ ᎠᏓᏁᎳᏅᎯ ==
 [[File:humpbackwhale37.jpg|thumb|right|300px|[[Humpback Whale|ᎠᏎᎸᎯ ᎦᏐᎯ ᎤᏔᎾ ᎠᏣᏗ]] ᎠᏲᏍᏙᏗ ᎠᏚᏯᏍᏛ]]
-{{seealso|Evolution of cetaceans}}
 ᏂᎦᏛ ᎤᏔᎾ ᎠᏣᏗ, ᎠᎺᏉᎯ ᎠᎴ ᏂᎬᎢ ᎧᏁᏉᎩ ᎦᏙᎯ-ᎠᎴᏂᏙᎲ ᎦᎾᏝᎢ, ᎤᎪᏗᏗ ᏄᏓᎷᎸᎾ ᎯᎠ [[Artiodactyl]] [[order (biology)|ᎠᏓᏅᏍᏗ]]. ᎤᏅᏌ ᎤᏴᎸᎩ ᎯᎠ ᎠᎹ ᎤᏐᏅ 50 ᎢᏳᏆᏗᏅᏓ ᏧᏕᏘᏴᏓ ᎢᏳ ᏥᎨᏒ.<ref>{{cite web|url=http://news.bbc.co.uk/1/hi/sci/tech/1974869.stm|title=How whales learned to swim|publisher=BBC News|date=2002-05-08|accessdate=2006-08-20}}</ref>
 
 Cetaceans ᎤᏂᏯᏙᎸ ᎾᏀᎢ ᏔᎵ ᎠᏓᏅᏍᏗ:
-* ᎯᎠ [[baleen whale|ᏗᏓᏁᏍᎩ ᎤᏔᎾ ᎠᏣᏗ]]ᎠᎦᏓᏅᏖᏗ ᎾᎥᎢ [[baleen|ᏗᏓᏁᏍᎩ]], ᎠᏓᏁᎳᏅᎯ-ᎾᏍᎩᏯᎢ ᎠᏛᎯᏍᏙᏗ ᎭᏫᎾᏗᏢ ᎯᎠ ᎦᎸᎳᏗᏢ ᎠᏳᎨᏂ ᎪᏢᏅᎯ [[keratin]], ᎦᏙ ᎤᏍᏗ ᎤᏅᏌ ᎬᏙᏗ ᎢᏳᏍᏗ ᎧᏃᎮᏗ [[plankton|ᎤᏯᏖᎾ ᎢᏯᏛᏂ]] ᏂᏛᎴᏅᏓ ᎯᎠ ᎠᎹ. ᎤᏅᏌ ᎯᎠ ᎤᏔᏂᎢᏍᏗ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᎤᏔᎾ ᎠᏣᏗ.
-* ᎯᎠ [[toothed whale|ᎦᏅᏙᎬ ᎤᏔᎾ ᎠᏣᏗ]]ᎤᎭ ᏕᎦᏅᏙᎬ ᎠᎴ ᎠᎵᏍᏓᏴᏗ ᏀᎾ ᎠᏣᏗ, squid, ᎠᎴ ᎢᏧᎳ. ᏙᏯᏗᏢ ᏓᏚᏓᎸ ᏅᏏᎾᏒ ᎪᎯ ᎤᎾᏓᏟᏌᎲ ᎨᏒᎢ ᎤᏓᏅᏖᏗ ᎤᎾᏤᎵ ᏓᎦᏚᏫᏍᏗᏍᎬ ᏄᏍᏗᏓᏅ ᏗᎬᏩᎶᏒ [[animal echolocation|ᎤᏃᏴᎬ ᏂᏓᏳᏨᏓ ᎦᎷᎯᏍᏗ]].
+* ᎯᎠ [[baleen whale|ᏗᏓᏁᏍᎩ ᎤᏔᎾ ᎠᏣᏗ]] ᎠᎦᏓᏅᏖᏗ ᎾᎥᎢ [[baleen|ᏗᏓᏁᏍᎩ]], ᎠᏓᏁᎳᏅᎯ-ᎾᏍᎩᏯᎢ ᎠᏛᎯᏍᏙᏗ ᎭᏫᎾᏗᏢ ᎯᎠ ᎦᎸᎳᏗᏢ ᎠᏳᎨᏂ ᎪᏢᏅᎯ [[keratin]], ᎦᏙ ᎤᏍᏗ ᎤᏅᏌ ᎬᏙᏗ ᎢᏳᏍᏗ ᎧᏃᎮᏗ [[plankton|ᎤᏯᏖᎾ ᎢᏯᏛᏂ]] ᏂᏛᎴᏅᏓ ᎯᎠ ᎠᎹ. ᎤᏅᏌ ᎯᎠ ᎤᏔᏂᎢᏍᏗ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᎤᏔᎾ ᎠᏣᏗ.
+* ᎯᎠ [[toothed whale|ᎦᏅᏙᎬ ᎤᏔᎾ ᎠᏣᏗ]] ᎤᎭ ᏕᎦᏅᏙᎬ ᎠᎴ ᎠᎵᏍᏓᏴᏗ ᏀᎾ ᎠᏣᏗ, squid, ᎠᎴ ᎢᏧᎳ. ᏙᏯᏗᏢ ᏓᏚᏓᎸ ᏅᏏᎾᏒ ᎪᎯ ᎤᎾᏓᏟᏌᎲ ᎨᏒᎢ ᎤᏓᏅᏖᏗ ᎤᎾᏤᎵ ᏓᎦᏚᏫᏍᏗᏍᎬ ᏄᏍᏗᏓᏅ ᏗᎬᏩᎶᏒ [[animal echolocation|ᎤᏃᏴᎬ ᏂᏓᏳᏨᏓ ᎦᎷᎯᏍᏗ]].
 
-ᎧᎵᏬᎯ ᎦᎸᎳᏗᏢ--ᎢᏳ ᎢᎪᎯ ᎠᏓᏁᎳᏅᎯ ᏙᎪᏩᎸ ᏂᎦᏛ [[cetacean]] ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ, ᎠᏠᏯᏍᏗᏍᎩ ᏂᎦᏛ ᎤᏔᎾ ᎠᏣᏗ, ᎨᏒᎢ ᎢᎦᏘᎭ ᎢᎬᏁᏗ ᎾᎾᎢ ᎯᎠ [[Cetacea]] ᎤᏓᏡᎬ.
+ᎧᎵᏬᎯ ᎦᎸᎳᏗᏢ–ᎢᏳ ᎢᎪᎯ ᎠᏓᏁᎳᏅᎯ ᏙᎪᏩᎸ ᏂᎦᏛ [[cetacean]] ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ, ᎠᏠᏯᏍᏗᏍᎩ ᏂᎦᏛ ᎤᏔᎾ ᎠᏣᏗ, ᎨᏒᎢ ᎢᎦᏘᎭ ᎢᎬᏁᏗ ᎾᎾᎢ ᎯᎠ [[Cetacea]] ᎤᏓᏡᎬ.
 
 == ᎠᏯᏙᎵ ==
 
-ᎾᏍᎩᏯᎢ ᏂᎦᏛ [[mammals|ᎦᎾᏝᎢ]], ᎤᏔᎾ ᎠᏣᏗ ᎧᏬᎳᏕᏛ ᎤᏃᎴ ᎾᏀᎢ [[lung|ᏧᏪᎳ]], [[endotherm|ᎤᎦᎾᏩ-ᎩᎬᎭ]], ᎨᎳᏍᏙᏗ ᎤᎾᏤᎵ ᎠᏲᎵ [[milk|ᎤᏅᏗ]] ᏂᏛᎴᏅᏓ [[mammary gland]], ᎠᎴ ᎤᎭ ᎢᎦᏛ (ᎾᏍᎩ ᎤᏁᎳᎩ ᎤᏙᎯᏳ ᎤᏍᏗ) [[hair|ᎤᏍᏗᏰᎬ]]. ᎠᏲᎵ ᎠᏓᏅᏖᏗ, [[Eric Alexander Ivanov]], ᎭᏫᎾᏗᏢ 1911, ᏥᏄᏍᏛᎩ ᎯᎠ ᎢᎬᏱ ᎪᎷᏩᏛᏗ Ꮎ ᎯᎠ ᎤᏔᎾ ᎠᏣᏗ ᎤᏤᎵ ᏧᏂᎦᏴᎵᎨ ᎢᏳᎵᏍᏔᏅ ᎠᎴᏂᏙᎸ ᏀᎾ ᎦᏙᎯ, ᎠᎴ Ꮎ ᎤᏔᎾ ᎠᏣᏗ ᎤᎭ ᏰᎵ ᏗᏙᎳᎩ ᎢᎬᏁᎸ ᎠᏂᎧᎵ aquatic ᎥᎴᏂᏙᎲ. ᎾᎾᎢ ᎢᎬᏱ ᎤᏤᎵ ᎥᏩᏘᏍᎬ ᎨᏒᎩ ᎾᏍᎩ ᏂᎨᏒᎾ ᏗᏓᏂᎸᎢᏍᏗ ᎾᎥᎢ ᎯᎠ ᎠᏏᎾᏍᏛ ᎾᎥ ᏄᎾᏓᎸ, ᎠᎴ ᎨᏒᎩ ᎣᏂᏯᎨᏍᏙᏗ ᎪᎯᏳᏔᏅ ᎪᏢᎯᏐᏗ. Ivanov ᏚᎸᏫᏍᏓᏁᎸᎩ ᎬᏙᏗ ᎠᏂᏐᎢ ᎠᎴᏫᏍᏙᏗ ᎤᏔᎾ ᎠᏣᏗ ᎭᏫᎾᏗᏢ ᎯᎠ [[United States|ᏌᏊᎭ ᎧᏃᎮᎭ]]. Eric Ivanov ᎤᏲᎱᏒ ᏍᏆᎵᎯᎨ ᎤᎶᏐᏅ ᎤᏤᎵ ᎠᎾᎩᏍᏗ ᏥᏄᏍᏛᎩ ᎠᎵᏂᎬᏁᏗ.
+ᎾᏍᎩᏯᎢ ᏂᎦᏛ [[mammals|ᎦᎾᏝᎢ]], ᎤᏔᎾ ᎠᏣᏗ ᎧᏬᎳᏕᏛ ᎤᏃᎴ ᎾᏀᎢ [[lung|ᏧᏪᎳ]], [[endotherm|ᎤᎦᎾᏩ-ᎩᎬᎭ]], ᎨᎳᏍᏙᏗ ᎤᎾᏤᎵ ᎠᏲᎵ [[milk|ᎤᏅᏗ]] ᏂᏛᎴᏅᏓ [[mammary gland]], ᎠᎴ ᎤᎭ ᎢᎦᏛ (ᎾᏍᎩ ᎤᏁᎳᎩ ᎤᏙᎯᏳ ᎤᏍᏗ) [[hair|ᎤᏍᏗᏰᎬ]]. ᎠᏲᎵ ᎠᏓᏅᏖᏗ, [[Eric Alexander Ivanov]], ᎭᏫᎾᏗᏢ 1911, ᏥᏄᏍᏛᎩ ᎯᎠ ᎢᎬᏱ ᎪᎷᏩᏛᏗ Ꮎ ᎯᎠ ᎤᏔᎾ ᎠᏣᏗ ᎤᏤᎵ ᏧᏂᎦᏴᎵᎨ ᎢᏳᎵᏍᏔᏅ ᎠᎴᏂᏙᎸ ᏀᎾ ᎦᏙᎯ, ᎠᎴ Ꮎ ᎤᏔᎾ ᎠᏣᏗ ᎤᎭ ᏰᎵ ᏗᏙᎳᎩ ᎢᎬᏁᎸ ᎠᏂᎧᎵ aquatic ᎥᎴᏂᏙᎲ. ᎾᎾᎢ ᎢᎬᏱ ᎤᏤᎵ ᎥᏩᏘᏍᎬ ᎨᏒᎩ ᎾᏍᎩ ᏂᎨᏒᎾ ᏗᏓᏂᎸᎢᏍᏗ ᎾᎥᎢ ᎯᎠ ᎠᏏᎾᏍᏛ ᎾᎥ ᏄᎾᏓᎸ, ᎠᎴ ᎨᏒᎩ ᎣᏂᏯᎨᏍᏙᏗ ᎪᎯᏳᏔᏅ ᎪᏢᎯᏐᏗ. Ivanov ᏚᎸᏫᏍᏓᏁᎸᎩ ᎬᏙᏗ ᎠᏂᏐᎢ ᎠᎴᏫᏍᏙᏗ ᎤᏔᎾ ᎠᏣᏗ ᎭᏫᎾᏗᏢ ᎯᎠ [[United States|ᎠᎹᏰᏟ]]. Eric Ivanov ᎤᏲᎱᏒ ᏍᏆᎵᎯᎨ ᎤᎶᏐᏅ ᎤᏤᎵ ᎠᎾᎩᏍᏗ ᏥᏄᏍᏛᎩ ᎠᎵᏂᎬᏁᏗ.
 
-ᎯᎠ ᎠᏰᎸ ᎨᏒᎢ [[fusiform|ᏓᏍᏓᏅᏅ ᏚᎷᏨ]], ᎤᏠᏱ ᎯᎠ ᎤᏪᏴᎢ ᎠᏍᏓᏅᏅ ᎤᏙᏢᏒ [[fish|ᎠᏣᏗ]]. ᎯᎠ ᎠᎬᏱᏗᏢ ᎤᏩᏂᎦᎸ, ᎾᏍᎩ ᎾᏍᏇ ᎤᏯᏅᎲ ᎠᏂᎩᏍᏗ ᏥᏳ, ᎠᏚᎯᏂᏓᏍᏗ-ᎤᏙᏢᏒᎢ. ᎯᎠ ᎤᎵᏍᏛ ᎯᎠ ᎦᏂᏓᏛ ᏗᏂᏂᏴ ᎯᎠ ᏓᏍᏓᏅᏅ ᏚᎷᏨ, ᎠᎴ ᎦᏂᏓᏛ ᎠᏂᎩᏍᏗ ᏥᏳ, ᎦᏙ ᎤᏍᏗ ᎠᏓᏁᎳᏁᏗ ᎤᎵᏍᏓ ᏗᎫᎪᏙᏗ ᎾᎥᎢ ᎠᎷᏚᎧᏘ ᎠᏓᏅᏏᏙᎠ.  ᎾᏍᎩ ᎤᏁᎳᎩ ᎤᏔᎾ ᎠᏣᏗ ᏂᎦᎥᏊ ᎿᏛᎦ ᎾᏍᎩ ᏂᎨᏒᎾ ᏄᏩᎾᏅ ᎣᏂᏗᏢ ᎤᏩᏂᎦᎸ, ᎢᎦᏛ ᎤᏔᎾ ᎠᏣᏗ (ᏯᏛᎿ ᏥᏄᏍᏗ [[sperm whale|ᏂᎬᏂᏏᏍᎬ ᎤᏔᎾ ᎠᏣᏗ]]ᎠᎴ [[baleen whale|ᏗᏓᏁᏍᎩ ᎤᏔᎾ ᎠᏣᏗ]]) ᎢᏳᏊ ᏂᎦᎵᏍᏗ ᎤᎭ ᎤᏍᏗ ᎣᏂᏗᏢ ᎤᏩᏂᎦᎸ; ᎢᎦᏛ ᎢᏧᎳᎭ ᎬᏙᏗ ᏧᎾᎳᏏᏕᎾ ᎠᎴ ᏎᏍᏗ.  ᎤᎪᏗᏗ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᎤᏔᎾ ᎠᏣᏗ ᎠᎵᏐᏆᎸᏗ ᎠᏂᎩᏍᏗ ᏥᏳ ᏀᎾ ᎤᎾᏤᎵ ᎦᏐᎯ ᎤᎾᏅᏛ ᏥᏄᏍᏗ [[dorsal fin|ᎣᏂᏗᏢ ᎠᏂᎩᏍᏗ ᏥᏳ]].
+ᎯᎠ ᎠᏰᎸ ᎨᏒᎢ [[fusiform|ᏓᏍᏓᏅᏅ ᏚᎷᏨ]], ᎤᏠᏱ ᎯᎠ ᎤᏪᏴᎢ ᎠᏍᏓᏅᏅ ᎤᏙᏢᏒ [[fish|ᎠᏣᏗ]]. ᎯᎠ ᎠᎬᏱᏗᏢ ᎤᏩᏂᎦᎸ, ᎾᏍᎩ ᎾᏍᏇ ᎤᏯᏅᎲ ᎠᏂᎩᏍᏗ ᏥᏳ, ᎠᏚᎯᏂᏓᏍᏗ-ᎤᏙᏢᏒᎢ. ᎯᎠ ᎤᎵᏍᏛ ᎯᎠ ᎦᏂᏓᏛ ᏗᏂᏂᏴ ᎯᎠ ᏓᏍᏓᏅᏅ ᏚᎷᏨ, ᎠᎴ ᎦᏂᏓᏛ ᎠᏂᎩᏍᏗ ᏥᏳ, ᎦᏙ ᎤᏍᏗ ᎠᏓᏁᎳᏁᏗ ᎤᎵᏍᏓ ᏗᎫᎪᏙᏗ ᎾᎥᎢ ᎠᎷᏚᎧᏘ ᎠᏓᏅᏏᏙᎠ.  ᎾᏍᎩ ᎤᏁᎳᎩ ᎤᏔᎾ ᎠᏣᏗ ᏂᎦᎥᏊ ᎿᏛᎦ ᎾᏍᎩ ᏂᎨᏒᎾ ᏄᏩᎾᏅ ᎣᏂᏗᏢ ᎤᏩᏂᎦᎸ, ᎢᎦᏛ ᎤᏔᎾ ᎠᏣᏗ (ᏯᏛᎿ ᏥᏄᏍᏗ [[sperm whale|ᏂᎬᏂᏏᏍᎬ ᎤᏔᎾ ᎠᏣᏗ]] ᎠᎴ [[baleen whale|ᏗᏓᏁᏍᎩ ᎤᏔᎾ ᎠᏣᏗ]]) ᎢᏳᏊ ᏂᎦᎵᏍᏗ ᎤᎭ ᎤᏍᏗ ᎣᏂᏗᏢ ᎤᏩᏂᎦᎸ; ᎢᎦᏛ ᎢᏧᎳᎭ ᎬᏙᏗ ᏧᎾᎳᏏᏕᎾ ᎠᎴ ᏎᏍᏗ. ᎤᎪᏗᏗ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᎤᏔᎾ ᎠᏣᏗ ᎠᎵᏐᏆᎸᏗ ᎠᏂᎩᏍᏗ ᏥᏳ ᏀᎾ ᎤᎾᏤᎵ ᎦᏐᎯ ᎤᎾᏅᏛ ᏥᏄᏍᏗ [[dorsal fin|ᎣᏂᏗᏢ ᎠᏂᎩᏍᏗ ᏥᏳ]].
 
 ᎭᏫᎾᏗᏢ ᎯᎠ [[skin|ᎦᏁᎦ]] ᏓᏂᎾᎬ ᎠᏠᏗ [[fat|ᎦᎵᏦᎯᏓ]], ᎯᎠ [[blubber|ᎪᎢ]]. ᎾᏍᎩ ᏧᏂᎸᏫᏍᏓᏁᏗ ᏥᏄᏍᏗ [[energy|ᏄᎵᏂᎬᎬ]] ᎥᏓᎵ ᎠᎴ ᎾᏍᎩ ᎾᏍᏇ ᏥᏄᏍᏗ [[Thermal insulation|ᏧᏠᎯᏍᏗ]]. ᎤᏔᎾ ᎠᏣᏗ ᎤᎭ ᏅᎩ-ᎤᏂᏴᏍᏗ [[heart|ᎠᏓᏅᏙ]]. ᎯᎠ [[neck|ᎠᎩᎳᎨᏂ]] [[vertebrae]] ᎤᎾᏓᏟᏌᏅ ᎭᏫᎾᏗᏢ ᎤᎪᏗᏗ ᎤᏔᎾ ᎠᏣᏗ, ᎦᏙ ᎤᏍᏗ ᏓᏓᏁᎳᏁ ᎦᏘᏍᏗ ᏀᎢᏳᎨᏒ [[swimming|ᎠᏓᏬᏍᎬ]] ᎾᎾᎢ ᎯᎠ ᏓᎵᎬᏩᎸᏍᎬ ᏩᏂᎨ.
 
-ᎤᏔᎾ ᎠᏣᏗ ᎧᏬᎳᏕᏛ ᏗᎬᏩᎶᏒ [[Blowhole (bio)|ᎠᎥᏣᏬᎳᏛ]], ᎤᏂᎷᏨ ᏀᎾ ᎯᎠ ᎦᏚᎢ ᎯᎠ ᎠᏍᎪᎵ ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᎯᎠ ᎦᎾᏝᎢ ᏰᎵᏇ ᏂᎦᏰᏙᎲ ᎠᏍᏛᎩ. [[Baleen whale|ᏗᏓᏁᏍᎩ ᎤᏔᎾ ᎠᏣᏗ]]ᎤᎭ ᏔᎵ; [[toothed whale|ᎦᏅᏙᎬ ᎤᏔᎾ ᎠᏣᏗ]]ᎤᎭ ᏌᏊ. ᎯᎠ ᎤᏙᏢᏒᎢ ᎤᏔᎾ ᎠᏣᏗ' ᎢᏳᏍᏗ ᎧᏃᎮᏗ ᎯᎳᎪ ᎢᏳ ᎠᏓᏄᎪᏫᏍᏗ ᎤᎶᏐᏅ ᏗᎵᎬᏯᏍᏗ, ᎯᎳᎪ ᎢᏳ ᎠᎪᎲᎢ ᏂᏛᎴᏅᏓ ᎯᎠ ᏚᏳᎪᏛ ᏓᏍᏓᏅᏅ ᏚᎷᏨ, ᏚᏓᎴᎿᎥ ᎠᏰᎵ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ. ᎤᏔᎾ ᎠᏣᏗ ᎤᎭ ᎤᏠᏱ  ditlilostanv ᎢᏯᏛᏁᎵᏓᏍᏗ Ꮎ ᎤᎵᏍᎪᎸᏔᏅ ᎠᏂ ᎡᏙᎠ ᎭᏫᎾᏗᏢ ᎠᎹ ᎾᏍᎩᎾᎢ ᎦᏅᎯᏓ ᏗᎴᏪᎢᏍᏙᏗ ᎠᎴᏰᏑ ᏄᏠᏯᏍᏛᎾ ᎠᎩᏍᎬᎢ ᎭᏫᎾᏗᏢ [[oxygen|ᎥᎴᏂᏙᎲ]]. ᎢᎦᏛ ᎤᏔᎾ ᎠᏣᏗ, ᏯᏛᎿ ᏥᏄᏍᏗ ᎯᎠ [[Sperm Whale|ᏂᎬᏂᏏᏍᎬ ᎤᏔᎾ ᎠᏣᏗ]], ᏰᎵᏇ ᎡᏙᎠ ᎭᏫᎾᏗᏢ ᎠᎹ ᎾᏍᎩᎾᎢ ᎦᎸᎳᏗᏢ ᏔᎵ ᎢᏧᏟᎶᏛ ᏚᏂᏴᏒ ᏏᏴᏫ ᎧᏬᎳᏕᏍᎬ. ᎯᎠ [[Blue Whale|ᏌᎪᏂᎨ ᎤᏔᎾ ᎠᏣᏗ]] ᎨᏒᎢ ᎯᎠ ᎤᏔᏂᎢᏍᏗ ᎤᎾᏅᏛ ᎦᎾᏝᎢ Ꮎ ᎤᎭ ᎢᏳᏊ ᎠᎴᏂᏙᎸ, ᎠᎴ ᎯᎠ ᎤᏔᏂᎢᏍᏗ ᎠᎴᏂᏙᎲ ᎦᎾᏝᎢ, ᎾᎾᎢ ᎦᎸᎳᏗᏢ 30 m (93ft) ᎦᏅᎯᏓ ᎠᎴ 180 ᎯᎸᏍᎩ ᎢᏯᏛᏂ.
+ᎤᏔᎾ ᎠᏣᏗ ᎧᏬᎳᏕᏛ ᏗᎬᏩᎶᏒ [[Blowhole (bio)|ᎠᎥᏣᏬᎳᏛ]], ᎤᏂᎷᏨ ᏀᎾ ᎯᎠ ᎦᏚᎢ ᎯᎠ ᎠᏍᎪᎵ ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᎯᎠ ᎦᎾᏝᎢ ᏰᎵᏇ ᏂᎦᏰᏙᎲ ᎠᏍᏛᎩ. [[Baleen whale|ᏗᏓᏁᏍᎩ ᎤᏔᎾ ᎠᏣᏗ]] ᎤᎭ ᏔᎵ; [[toothed whale|ᎦᏅᏙᎬ ᎤᏔᎾ ᎠᏣᏗ]] ᎤᎭ ᏌᏊ. ᎯᎠ ᎤᏙᏢᏒᎢ ᎤᏔᎾ ᎠᏣᏗ' ᎢᏳᏍᏗ ᎧᏃᎮᏗ ᎯᎳᎪ ᎢᏳ ᎠᏓᏄᎪᏫᏍᏗ ᎤᎶᏐᏅ ᏗᎵᎬᏯᏍᏗ, ᎯᎳᎪ ᎢᏳ ᎠᎪᎲᎢ ᏂᏛᎴᏅᏓ ᎯᎠ ᏚᏳᎪᏛ ᏓᏍᏓᏅᏅ ᏚᎷᏨ, ᏚᏓᎴᎿᎥ ᎠᏰᎵ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ. ᎤᏔᎾ ᎠᏣᏗ ᎤᎭ ᎤᏠᏱ  [[photograph|ᏗᏟᏕᏍᏔᏅ]] ᎢᏯᏛᏁᎵᏓᏍᏗ Ꮎ ᎤᎵᏍᎪᎸᏔᏅ ᎠᏂ ᎡᏙᎠ ᎭᏫᎾᏗᏢ ᎠᎹ ᎾᏍᎩᎾᎢ ᎦᏅᎯᏓ ᏗᎴᏪᎢᏍᏙᏗ ᎠᎴᏰᏑ ᏄᏠᏯᏍᏛᎾ ᎠᎩᏍᎬᎢ ᎭᏫᎾᏗᏢ [[oxygen|ᎥᎴᏂᏙᎲ]]. ᎢᎦᏛ ᎤᏔᎾ ᎠᏣᏗ, ᏯᏛᎿ ᏥᏄᏍᏗ ᎯᎠ [[Sperm Whale|ᏂᎬᏂᏏᏍᎬ ᎤᏔᎾ ᎠᏣᏗ]], ᏰᎵᏇ ᎡᏙᎠ ᎭᏫᎾᏗᏢ ᎠᎹ ᎾᏍᎩᎾᎢ ᎦᎸᎳᏗᏢ ᏔᎵ ᎢᏧᏟᎶᏛ ᏚᏂᏴᏒ ᏏᏴᏫ ᎧᏬᎳᏕᏍᎬ. ᎯᎠ [[Blue Whale|ᏌᎪᏂᎨ ᎤᏔᎾ ᎠᏣᏗ]] ᎨᏒᎢ ᎯᎠ ᎤᏔᏂᎢᏍᏗ ᎤᎾᏅᏛ ᎦᎾᏝᎢ Ꮎ ᎤᎭ ᎢᏳᏊ ᎠᎴᏂᏙᎸ, ᎠᎴ ᎯᎠ ᎤᏔᏂᎢᏍᏗ ᎠᎴᏂᏙᎲ ᎦᎾᏝᎢ, ᎾᎾᎢ ᎦᎸᎳᏗᏢ 30 m (93ft) ᎦᏅᎯᏓ ᎠᎴ 180 ᎯᎸᏍᎩ ᎢᏯᏛᏂ.
 
-ᎤᎾᏤᎵ [[skin|ᎦᏁᎦ]] ᎤᎭ ᎦᏇᏅᏗ hydrophilic ᏧᎬᏩᎶᏗ ᏂᎬᎿᏅ. Ꮝ ᎦᏚᎢ ᎨᏒᎢ ᎫᏝᎢ ᎬᏙᏗ ᎤᏍᏗ ᎠᏍᏚᎢᏍᎬ ᏓᎦᏚᏫᏍᏔᏅ ᎾᎥᎢ nanoridges{{Fact|date=February 2007}} ᎠᏰᎵ ᎾᏍᎩ ᎯᎠ ᏣᎴᎩ ᏀᎾᎢ ᎨᏒᎢ ᏗᏓᏁᏍᎩ-ᎾᏍᎩᏯᎢ gel ᎦᏙ ᎤᏍᏗ ᎨᏒᎢ ᎠᏓᏄᎪᏫᏍᏗ ᏂᏛᎴᏅᏓ ᎯᎠ ᏧᏠᎯᏍᏗ ᎠᏰᎵ ᎯᎠ ᎦᏁᎦ ᎦᏁᎸ.{{Fact|date=February 2007}} ᎪᎯ gel ᎢᎦᎢ ᎨᏐ enzymes Ꮎ ᏗᎦᏘᎸᏍᏗ ᎤᏍᏗ, ᎠᎴ ᎯᎠ ᎠᏍᏛᎢ ᎯᎠ ᏣᎴᎩ ᏗᎪᏢᏅ ᎾᏍᎩ ᎠᏍᏓᏯ ᎾᏍᎩᎾᎢ ᎤᏍᏗ ᎤᏔᎾ ᏗᎧᏃᎩᏍᏗ ᎠᎩᏍᏗᏱ ᎠᏠᏯᏍᏔᏅ.
+ᎤᎾᏤᎵ [[skin|ᎦᏁᎦ]] ᎤᎭ ᎦᏇᏅᏗ hydrophilic ᏧᎬᏩᎶᏗ ᏂᎬᎿᏅ. Ꮝ ᎦᏚᎢ ᎨᏒᎢ ᎫᏝᎢ ᎬᏙᏗ ᎤᏍᏗ ᎠᏍᏚᎢᏍᎬ ᏓᎦᏚᏫᏍᏔᏅ ᎾᎥᎢ nanoridgesᎠᏰᎵ ᎾᏍᎩ ᎯᎠ ᏣᎴᎩ ᏀᎾᎢ ᎨᏒᎢ ᏗᏓᏁᏍᎩ-ᎾᏍᎩᏯᎢ gel ᎦᏙ ᎤᏍᏗ ᎨᏒᎢ ᎠᏓᏄᎪᏫᏍᏗ ᏂᏛᎴᏅᏓ ᎯᎠ ᏧᏠᎯᏍᏗ ᎠᏰᎵ ᎯᎠ ᎦᏁᎦ ᎦᏁᎸ. ᎪᎯ gel ᎢᎦᎢ ᎨᏐ enzymes Ꮎ ᏗᎦᏘᎸᏍᏗ ᎤᏍᏗ, ᎠᎴ ᎯᎠ ᎠᏍᏛᎢ ᎯᎠ ᏣᎴᎩ ᏗᎪᏢᏅ ᎾᏍᎩ ᎠᏍᏓᏯ ᎾᏍᎩᎾᎢ ᎤᏍᏗ ᎤᏔᎾ ᏗᎧᏃᎩᏍᏗ ᎠᎩᏍᏗᏱ ᎠᏠᏯᏍᏔᏅ.
 
 ᎤᏔᎾ ᎠᏣᏗ ᏓᏍᏓᏅᏅ ᏚᎷᏨ ᎢᏳᏓᎵᎭ ᏰᎵᏇ ᎾᏍᏋ ᎬᏔᏅᎯ ᏥᏄᏍᏗ ᎠᏓᏙᎯᏙᏗ ᏓᏃᏪᎵᏍᎬ, ᏥᏄᏍᏗ ᎨᏒᎢ ᎯᎠ ᎦᎸᏛ ᎧᏁᏌᎢ ᎾᏍᎩᎾᎢ [[humpback whale|ᎠᏎᎸᎯ ᎦᏐᎯ ᎤᏔᎾ ᎠᏣᏗ]].  ᎪᎯ ᎨᏒᎢ ᎯᎠ ᎢᎬᎾᏗ ᎾᎥᎢ ᎦᏙ ᎤᏍᏗ ᎯᎠ ᏴᏫ ᎤᏁᏓᏍᏗ ᎤᏥᏍᏆᏙᏏᏰᏛ [[Humphrey the whale|ᎦᏣᏄᎳ ᎯᎠ ᎤᏔᎾ ᎠᏣᏗ]] ᏥᏄᏍᏛᎩ ᎠᏓᏙᎯᏙᏗ ᎭᏫᎾᏗᏢ ᏦᎢ ᏧᏓᎴᎿᎢ ᎠᎪᏩᏛᏗ.
 
 === ᎠᏯᏙᎵ ᎯᎠ ᎦᎴᏂ ===
-{{Seealso|Evolution of cetaceans}}
-ᏀᎢᏳᎢ ᏀᎾᎢ ᎠᏓᏎᎮᏗ ᎤᏠᏱ ᎠᏰᎵ ᎯᎠ [[ear|ᎦᎴᏂ]]ᎤᏔᎾ ᎠᏣᏗ ᎠᎴ [[human|ᏴᏫ]], whales’ ᏗᎦᎴᏂ ᎤᎭ ᏗᎪᏍᎩ ᏓᏓᏁᏤᎸ ᎤᎾᏤᎵ ᎭᏫᎾᏗᏢ ᎠᎹ ᏄᏍᏗᏓᏅ.  ᎭᏫᎾᏗᏢ ᎠᏂᏴᏫ, ᎯᎠ ᎠᏰᎵ ᎦᎴᏂ ᏧᏂᎸᏫᏍᏓᏁᏗ ᏥᏄᏍᏗ impedance ᎠᏥᎸ ᎪᏢᏗ ᎠᏰᎵ ᎯᎠ ᏙᏯᏗᏢ air’s ᎡᎳᏗ-impedance ᎠᎴ ᎯᎠ cochlear fluid’s ᎦᎸᎳᏗ-impedance.  ᎭᏫᎾᏗᏢ aquatic ᎦᎾᏝᎢ ᏯᏛᎿ ᏥᏄᏍᏗ ᎤᏔᎾ ᎠᏣᏗ, ᏱᏂᎬᏛᎾ, ᏀᎾᎢ ᎨᏒᎢ Ꮭ ᎡᏆ ᏧᏓᎴᎿᎢ ᎠᏰᎵ ᎯᎠ ᎠᏥᏄᎪᏫᏍᎬ ᎠᎴ ᎭᏫᎾᏗᏢ ᏄᏍᏗᏓᏅ.  ᎾᏍᎩᏍᎩᏂ ᏂᎨᏒᎾ ᎤᏃᏴᎬ ᎦᎶᏍᎬ ᏗᎬᏩᎶᏒ ᎠᏥᏄᎪᏫᏍᎬ ᎦᎴᏂ ᎠᏰᎵ ᎦᎴᏂ, ᎤᏔᎾ ᎠᏣᏗ ᎠᎩᏍᏗ ᎤᏃᏴᎬ ᏗᎬᏩᎶᏒ ᎤᎾᏤᎵ ᎡᎳᏗᎨ [[jaw|ᎠᏳᎨᏂ]], ᎭᏢᏃ ᎾᏍᎩ ᏓᏂᎶᏍᎬᎢ ᏗᎬᏩᎶᏒ ᎡᎳᏗ-impedance, ᎦᎵᏦᎯᏓ-ᎠᎧᎵᎸᎯ ᎧᏂᎬᎾᎥ.<ref>{{cite web| url=http://instruct1.cit.cornell.edu/courses/bionb424/students2004/kls36/neuroanatomy.htm|title=Anatomy of a Whale's Ear| accessdate=2006-09-14}}</ref>
+ᏀᎢᏳᎢ ᏀᎾᎢ ᎠᏓᏎᎮᏗ ᎤᏠᏱ ᎠᏰᎵ ᎯᎠ [[ear|ᎦᎴᏂ]] ᎤᏔᎾ ᎠᏣᏗ ᎠᎴ [[human|ᏴᏫ]], whales’ ᏗᎦᎴᏂ ᎤᎭ ᏗᎪᏍᎩ ᏓᏓᏁᏤᎸ ᎤᎾᏤᎵ ᎭᏫᎾᏗᏢ ᎠᎹ ᏄᏍᏗᏓᏅ.  ᎭᏫᎾᏗᏢ ᎠᏂᏴᏫ, ᎯᎠ ᎠᏰᎵ ᎦᎴᏂ ᏧᏂᎸᏫᏍᏓᏁᏗ ᏥᏄᏍᏗ impedance ᎠᏥᎸ ᎪᏢᏗ ᎠᏰᎵ ᎯᎠ ᏙᏯᏗᏢ air’s ᎡᎳᏗ-impedance ᎠᎴ ᎯᎠ cochlear fluid’s ᎦᎸᎳᏗ-impedance.  ᎭᏫᎾᏗᏢ aquatic ᎦᎾᏝᎢ ᏯᏛᎿ ᏥᏄᏍᏗ ᎤᏔᎾ ᎠᏣᏗ, ᏱᏂᎬᏛᎾ, ᏀᎾᎢ ᎨᏒᎢ Ꮭ ᎡᏆ ᏧᏓᎴᎿᎢ ᎠᏰᎵ ᎯᎠ ᎠᏥᏄᎪᏫᏍᎬ ᎠᎴ ᎭᏫᎾᏗᏢ ᏄᏍᏗᏓᏅ.  ᎾᏍᎩᏍᎩᏂ ᏂᎨᏒᎾ ᎤᏃᏴᎬ ᎦᎶᏍᎬ ᏗᎬᏩᎶᏒ ᎠᏥᏄᎪᏫᏍᎬ ᎦᎴᏂ ᎠᏰᎵ ᎦᎴᏂ, ᎤᏔᎾ ᎠᏣᏗ ᎠᎩᏍᏗ ᎤᏃᏴᎬ ᏗᎬᏩᎶᏒ ᎤᎾᏤᎵ ᎡᎳᏗᎨ [[jaw|ᎠᏳᎨᏂ]], ᎭᏢᏃ ᎾᏍᎩ ᏓᏂᎶᏍᎬᎢ ᏗᎬᏩᎶᏒ ᎡᎳᏗ-impedance, ᎦᎵᏦᎯᏓ-ᎠᎧᎵᎸᎯ ᎧᏂᎬᎾᎥ.<ref>{{cite web| url=http://instruct1.cit.cornell.edu/courses/bionb424/students2004/kls36/neuroanatomy.htm|title=Anatomy of a Whale's Ear| accessdate=2006-09-14}}</ref>
 
 == ᎾᏛᏁᎲᎢ ==
-[[File:Whale tail flip.jpg|thumb|right|300px|ᎠᏎᎸᎯ ᎦᏐᎯ ᎤᏔᎾ ᎠᏣᏗ ᎦᏂᏓᏛ ᎠᏗᏅᏗ ᎤᏣᏘᎾ ᎠᎹᏳᎸᏗ  Moloka'ᎠᏯ, Hawaii, 2005]]
-{{Main|Whale behaviour}}
+[[File:Whale tail flip.jpg|thumb|right|300px|ᎠᏎᎸᎯ ᎦᏐᎯ ᎤᏔᎾ ᎠᏣᏗ ᎦᏂᏓᏛ ᎠᏗᏅᏗ ᎤᏣᏘᎾ ᎠᎹᏳᎸᏗ  [[Moloka'i|ᎼᎶᎧᎢ]], [[Hawaii|ᎭᏩᏱ]], 2005]]
 
 ᎤᏔᎾ ᎠᏣᏗ ᎠᏯᏖᎾ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᏥᏄᏍᏗ [[predator|ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᎾᎾᎢ]], ᎠᎴ ᎤᎾᏤᎵ ᎠᎵᏍᏓᏴᏗ ᎤᏃᏴᎬ ᏂᏛᎴᏅᏓ ᎤᏍᏗ ᎤᏯᏖᎾ ᎢᏯᏛᏂ ᎤᏙᎯᏳ ᎡᏆ ᎠᏣᏗ. ᎠᏍᎦᏯ ᎤᏯᏅᎲ ᏩᎦᏧᎧᏅᏍᏕᎾ; ᎠᎨᏴ, ᏩᎦ. ᎯᎠ ᎠᏲᎵ ᎤᏯᏅᎲ ᎠᎩᎾ.
 
@@ -45,17 +42,15 @@ Cetaceans ᎤᏂᏯᏙᎸ ᎾᏀᎢ ᏔᎵ ᎠᏓᏅᏍᏗ:
 ᎯᎠ ᎠᏍᎦᏯ ᎠᏛᎯᏍᏙᏗ ᎧᏃᎮᎸᏍᎩ ᎾᏀᎢ ᎧᏂᎬᎾᎥ ᎯᎠ ᎠᏰᎸ ᏀᎢᏳᎨᏒ ᎠᏓᏬᏍᎬ, ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᏥᏄᏍᏗ ᎾᏍᏋ ᎤᏪᏴᎢ ᎠᏍᏓᏅᏅ ᎠᎴ ᎠᎦᏲᎳᏅ ᎦᎾᏏᏅᏍᏗ. ᎤᎪᏗᏗ ᎤᏔᎾ ᎠᏣᏗ ᎿᏛᎦ ᎾᏍᎩ ᏂᎨᏒᎾ ᎢᎦᏘᎭ ᎢᎬᏁᏗ ᎣᏍᏛ ᏄᏩᏁᎸ ᎤᎾᎵᎪᏒ ᏀᎢᏳᎨᏒ ᎠᏯᏖᏃ ᎦᏅᏗ; ᎭᏫᎾᏗᏢ ᎤᎪᏗᏗ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᎯᎠ ᎠᎨᏴ ᎤᎭ ᎯᎸᏍᎩ ᎠᏯᏖᏃ ᎦᏅᏗ ᎠᏂᏏᏴᏫᎭ ᎢᏳ ᎤᏕᏘᏴᏌᏗᏒ. ᎾᎾᎢ ᎤᏕᏅ ᎯᎠ ᎠᏲᎵ ᎨᏒᎢ ᏩᏅᎯ ᎦᏂᏓᏛ-ᎢᎬᏱ, ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᎯᎠ ᎠᏁᎸᏙᏗ ᎫᏂᏍᎧ ᎨᏒᎢ ᎤᏍᏗ. ᎤᏔᎾ ᎠᏣᏗ ᏧᏂᏥ ᏧᏂᏢᎩ ᏗᎦᏘᏯ ᎯᎠ ᎠᏲᎵ ᎾᎥᎢ ᎢᏯᏛᏁᎯ ᎠᏓᏄᎪᏫᏍᏗ ᎤᏅᏗ ᎾᏀᎢ ᎤᎾᏤᎵ ᎠᎣᎵ, ᎤᏅᏗ Ꮎ ᎧᎵ ᏗᏙᎳᎩ ᎠᏓᏥ ᏂᎬᏩᏍᏛ [[Ernst Dieffenbach|Dieffenbach]], ᎯᎸᏍᎩ ᏲᏅ ᎡᏆ ᎤᏠᏱ ᏩᎦ ᎤᏤᎵ ᎤᏅᏗ, ᎾᏍᎩ ᎤᏩᏒ ᎬᏙᏗ ᎤᏣᏘ ᎦᎸᎳᏗᎨᏍᏙᏗ ᎤᏓᏂᏝᏅ ᎦᎵᏦᎯᏓ.  ᎤᎾᏙᏢᎯ ᎤᏠᏱ ᎢᎬᏁᏗ ᎯᎠ ᏧᏠᏱᎭ ᏧᎾᏬᏍᏗ ᎤᏔᎾ ᎠᏣᏗ ᎤᏅᏗ ᎦᎵᏦᏕ ᎠᏓᏁᎸ ᎤᏅᏗ ᎦᏚᏅ; ᎾᏍᎩ ᎠᏎ ᎾᏍᏋ ᎤᎭᎨᏛ, ᎠᎴ ᎠᎴ ᎾᏍᎩ ᎾᏍᎩ ᏫᎵ ᎤᏲᏨᎯ ᎾᏀᎢ ᎯᎠ ᏓᎦᏚᏫᏍᏗᏍᎬ ᎠᎹ.
 
 == ᎪᎱᏍᏗ ᎨᏒ ==
-{{Main|Cetacean intelligence}}
+ᎢᏳᏓᎵᎭ ᎬᏔᏅᎯ, ᎠᎴ ᎠᏓᏚᏗ <ref>ᎠᏯᏙᎯᎯ, T.W. (1990). ᎠᏓᏅᏖᏗ ᎠᎵᎢᎵᏒ ᎭᏫᎾᏗᏢ ᎪᎷᏩᏛᏗ ᎤᏅᏥᏓ-ᏂᎬᎢ ᎠᏓᎴᏂᏍᎬ. ''ᎠᏰᎵ ᏚᎾᏙᏢᏒ ᏕᎪᏪᎸ Primatology'', 11(3)- pp. 193-236</ref> ᎪᎯᏳᏙ ᎪᎱᏍᏗ ᎨᏒ ᎨᏒᎢ ᎦᏬᎯᎸᏙᏗ ᏂᎦᏛ [[brain|ᎤᏅᏥᏓ]] ᏂᎬᎢ, ᎣᏂ ᏧᏩᎫᏛ ᎠᏂᏴᏫ ᎤᎭ ᎤᏔᏂᏗ ᏧᏅᏥᏓ ᎬᎾᏬᏍᎬ ᎤᎪᏗᏗ ᏐᎢ ᎡᎿᎢ ᎡᎥ. ᎤᏔᎾ ᎠᏣᏗ ᎤᎭ ᎯᎠ ᎤᏔᏂᎢᏍᏗ ᎤᏅᏥᏓ ᏂᎦᎵᏍᏗᏍᎬᎫ ᎦᎾᏝᎢ. ᎤᏤᎵᏛ ᏂᎬᏂᏏᏍᎬ ᎤᏔᎾ ᎠᏣᏗ ᎤᏅᏥᏓ ᎦᏙᏗ ᎬᏩᏚᏫᏛ 7.8 kg, ᎠᎦᏎᏍᏙᏗ ᎤᏤᎵᏛ ᏴᏫ ᎤᏅᏥᏓ ᎦᏙᏗ ᎬᏩᏚᏫᏛ 1.5 kg. ᏀᎢᏳᎢ ᎾᏍᎩ ᎠᎾᏍᎬᏘ ᎢᎦᏰᎵᏍᏗ Ꮎ ᎪᎯ ᏯᏓᎢᏗᏏ ᎠᏓᏎᎮᏗ Ꮎ ᎯᏍᎩ ᎠᎴᏰᏑ ᎡᏆ ᎢᎨᏍᏙᏗ ᎪᎱᏍᏗ ᎨᏒ, ᏀᎾᎢ ᎨᏒᎢ ᎪᎷᏩᏛᏗ Ꮎ, ᎭᏫᎾᏗᏢ ᎦᎾᏝᎢ, ᎪᎱᏍᏗ ᎨᏒ ᎢᏳᏗᎾ ᎾᏍᏋ ᎠᏟᎶᏍᏗ ᎭᏫᎾᏗᏢ ᎯᎠ ᎤᏅᏥᏓ ᎦᏟᏌᏅ ᎤᎪᏗᏗ ᎠᏰᎸ ᎦᏟᏌᏅ ᎤᎪᏗᏗ ᎧᏁᎢᏍᏙᏗ, ᎠᎴ Ꮎ ᎤᎪᏗᏗ ᎯᎠ ᎤᏤᎵᏛ ᎤᏅᏥᏓ ᎢᎦᎢ ᎤᏝᏅᏛ ᎢᎬᏁᏗ ᎨᏒᎢ ᎬᏔᏅᎯ ᎠᏓᏅᏖᎵᏍᏓᏍᏗ ᎯᎠ ᎡᏆᎯᎨᏍᏙᏗ ᎠᏰᎸ. ᎾᏍᎩ ᎤᏩᏒ ᎠᎠᏂ ᎿᏛᎦ ᎠᏂᏴᏫ ᎤᎭ ᎠᏜᏅᎠᏓᏗᏍᎬ. ᏴᏫ ᎤᏅᏥᏓ ᎪᎯᏳᏙᏗ ᎬᏩᏚᏫᏛ 2% ᎯᎠ ᏴᏫ ᎠᏰᎸ ᎦᏟᏌᏅ ᎤᎪᏗᏗ, ᏀᎢᏳᎢ ᎯᎠ ᏂᎬᏂᏏᏍᎬ ᎤᏔᎾ ᎠᏣᏗ ᎤᏤᎵ ᎤᏅᏥᏓ ᎪᎯᏳᏙᏗ ᎾᏍᎩ ᎤᏩᏒ 0.02% Ꮝ ᎠᏰᎸ ᎦᏟᏌᏅ ᎤᎪᏗᏗ. [[cattle|ᏩᎦ]] ᎤᏅᏥᏓ ᎨᏒᎢ ᏅᎩ ᎠᎴᏰᏑ ᏥᏄᏍᏗ ᎡᏆ ᏥᏄᏍᏗ ᎤᏔᎾ ᎠᏣᏗ ᎤᏤᎵ ᎾᎥᎢ ᎪᎯ ᎠᎦᏛᏗ ᏄᏍᏛ. ᏀᎾ ᎯᎠ ᏐᎢ ᎤᏬᏰᏂ, ᎡᏆ ᎢᎦᏘᎭ ᎤᏔᎾ ᎠᏣᏗ ᎤᏤᎵ ᎠᏰᎸ ᎦᏟᏌᏅ ᎤᎪᏗᏗ ᎨᏒᎢ [[blubber|ᎪᎢ]], ᎦᏙ ᎤᏍᏗ ᎧᏁᎦ ᎢᏯᏛᏁᏗ Ꮭ ᎤᏅᏥᏓ ᎤᎳᏂᎬᎬ, ᎠᎴ ᎪᎯ ᎠᎷᏚᎧᏘ ᎯᎠ ᎧᏁᎢᏍᏙᏗ ᎾᏍᎩ ᏯᏛᎾ. ᏱᏂᎬᏛᎾ, ᎢᎬᏂᏏᏍᎩ cetacean ᏧᏅᏥᏓ ᎤᏯᎾᏛᏁᏗ ᎾᎥᏂᎨᏍᏙᏗ ᏧᏓᎴᎿᎢᎭ ᏂᏛᎴᏅᏓ ᎯᎠ ᏴᏫ ᎤᏅᏥᏓ, ᎢᏧᎳᎭ ᎢᏳᏃ ᎤᏔᎾ ᎠᏣᏗ ᎠᏰᎲ ᎠᏥᎸ ᎪᏢᏗ ᎠᏰᎸ/ᎤᏅᏥᏓ ᏄᏓᎨᏒ ᎧᏁᎢᏍᏙᏗ ᎠᏂᏴᏫ, ᎾᏍᎩ ᎨᏒᎢ ᎾᏍᎩ ᏂᎨᏒᎾ ᎠᏍᏆᏗᏍᏗ ᎠᏓᏎᎮᏗ ᎦᎸᎳᏗ ᎪᎱᏍᏗ ᎨᏒ. ᏄᏦᏍᏛᎾᏊ, "ᎦᏬᎯᎸᏙᏗ ᏂᎦᏛ" ᎤᏅᏥᏓ ᏂᎬᎢ ᎨᏒᎢ ᎾᏍᎩ ᏂᎨᏒᎾ ᏧᏚᎪᏔᏅ ᎠᎦᏛᏗ ᏄᏍᏛ ᎢᎬᏂᏏᏍᎩ ᎾᏍᎩ ᎨᏒᎢ ᎾᏊ ᎤᎾᏅᏛ Ꮎ ᏄᏓᎴᎿᎥ ᎢᎦᏛᎭ ᎯᎠ ᎤᏅᏥᏓ ᎪᏢᎯᏐᏗ ᏄᏓᎴᎿᎥ ᎤᏯᎾᏛᏁᏗ, ᎾᏍᎩ ᎤᎪᏗᏗ ᎤᎾᏙᏢᎯ. [[Hummingbird|ᏩᎴᎳ]] ᎤᎭ ᎢᏧᎳᎭ ᎦᎸᎳᏗᎨᏍᏙᏗ ᎤᏅᏥᏓ--ᎠᏰᎸ ᎧᏁᎢᏍᏙᏗ ᎬᎾᏬᏍᎬ ᎠᏂᏴᏫ. ᎯᎠ ᏐᎢ ᏗᏓᏁᏤᏗ ᎨᏒᎢ ᎯᎠ ᎠᏛᎯᏍᏙᏗ ᎯᎠ ᎤᏅᏥᏓ. ᎾᏍᎩ ᎨᏒᎢ ᏂᎦᎥᏊ ᏚᏓᏂᎸᏨ Ꮎ ᎯᎠ ᎤᏛᏏᏗᏒ ᎯᎠ [[neocortex|ᎤᎾᏙᏢᎯ ᎠᏰᎵ]], ᎢᏧᎳ ᎤᏙᎯᏳᎯᏯ ᎠᎴ ᎦᏃᏢᏥᏙᎯ ᎯᎠ ᎠᏣᏪᏐᎸᏍᏙᏗ ᎯᎠ ᎤᏅᏥᏓ, ᏀᎢᏳᎨᏒ ᏴᏫ ᎠᏓᎴᏂᏍᎬ, ᎤᎭ ᏭᏪᏙᎢ ᎤᎾᏚᏓᎸ ᎾᏍᎩᎾᎢ ᎯᎠ ᎠᏓᎴᏂᏍᎬ ᎪᎱᏍᏗ ᎨᏒ, ᏱᏂᎬᏛᎾ ᎧᏁᎢᏍᏔᏅᎯ. ᎭᏫᎾᏗᏢ ᎤᎪᏗᏗ ᎦᎾᏝᎢ ᎯᎠ ᎤᎾᏙᏢᎯ ᎠᏰᎵ ᎤᎭ ᏑᏓᎵ ᎠᏠᏗ, ᎠᎴ Ꮝ ᏄᏓᎴᎿᎥ ᎤᏯᎾᏛᏁᏗ ᎡᏍᎦᏂ (ᎠᎪᏩᏛᏗ, ᎠᏛᎩᏍᎬ, ᎠᎴ ᎤᏠᏯᏍᏗ) ᎪᏍᏓᏯ ᏄᏓᎴᎿᎥ. ᎯᎠ ᎤᏔᎾ ᎠᏣᏗ ᎤᎾᏙᏢᎯ ᎠᏰᎵ, ᏀᎾ ᎯᎠ ᏐᎢ ᎤᏬᏰᏂ, ᎤᎭ ᎾᏍᎩ ᎤᏩᏒ ᎯᏍᎩ ᎠᏠᏗ, ᎠᎴ ᏀᎾᎢ ᎨᏒᎢ ᎤᏍᏗ ᏗᏎᏍᏗ ᎾᏍᎩ ᎯᎠ ᎠᏠᏗ ᎧᎵ ᏗᏙᎳᎩ ᎤᏯᎾᏛᏁᏗ. ᎪᎯ ᎤᎭ ᎤᏗᏅᏒᎩ ᎢᎦᏛ ᎠᏘᏲᎯᎭ Ꮎ ᎯᎠ ᎤᏔᎾ ᎠᏣᏗ ᎤᏅᏥᏓ ᎤᎭ ᎾᏍᎩ ᏂᎨᏒᎾ ᎦᏛᎬᎢ ᎦᏇᏅᏗ ᎣᏂ ᏧᏩᎫᏛ ᎯᎠ ᏀᎾ ᎢᏴ ᏧᏂᎦᏴᎵᎨ ᎢᏳᎵᏍᏔᏅ ᎯᎠ ᎤᏔᎾ ᎠᏣᏗ ᎤᎩᏒᎩ ᎠᎢᏒ ᎥᎴᏂᏙᎲ ᎠᏣᏅᏗ ᎬᏩᏚᏫᏛ 50 ᎢᏳᏆᏗᏅᏓ ᏧᏕᏘᏴᏓ ᎢᏳ ᏥᎨᏒ.
 
-ᎢᏳᏓᎵᎭ ᎬᏔᏅᎯ, ᎠᎴ ᎠᏓᏚᏗ <ref>ᎠᏯᏙᎯᎯ, T.W. (1990). ᎠᏓᏅᏖᏗ ᎠᎵᎢᎵᏒ ᎭᏫᎾᏗᏢ ᎪᎷᏩᏛᏗ ᎤᏅᏥᏓ-ᏂᎬᎢ ᎠᏓᎴᏂᏍᎬ. ''ᎠᏰᎵ ᏚᎾᏙᏢᏒ ᏕᎪᏪᎸ Primatology'', '''11(3)'''- pp. 193-236</ref> ᎪᎯᏳᏙ ᎪᎱᏍᏗ ᎨᏒ ᎨᏒᎢ ᎦᏬᎯᎸᏙᏗ ᏂᎦᏛ [[brain|ᎤᏅᏥᏓ]] ᏂᎬᎢ, ᎣᏂ ᏧᏩᎫᏛ ᎠᏂᏴᏫ ᎤᎭ ᎤᏔᏂᏗ ᏧᏅᏥᏓ ᎬᎾᏬᏍᎬ ᎤᎪᏗᏗ ᏐᎢ ᎡᎿᎢ ᎡᎥ. ᎤᏔᎾ ᎠᏣᏗ ᎤᎭ ᎯᎠ ᎤᏔᏂᎢᏍᏗ ᎤᏅᏥᏓ ᏂᎦᎵᏍᏗᏍᎬᎫ ᎦᎾᏝᎢ. ᎤᏤᎵᏛ ᏂᎬᏂᏏᏍᎬ ᎤᏔᎾ ᎠᏣᏗ ᎤᏅᏥᏓ ᎦᏙᏗ ᎬᏩᏚᏫᏛ 7.8 kg, ᎠᎦᏎᏍᏙᏗ ᎤᏤᎵᏛ ᏴᏫ ᎤᏅᏥᏓ ᎦᏙᏗ ᎬᏩᏚᏫᏛ 1.5 kg. ᏀᎢᏳᎢ ᎾᏍᎩ ᎠᎾᏍᎬᏘ ᎢᎦᏰᎵᏍᏗ Ꮎ ᎪᎯ ᏯᏓᎢᏗᏏ ᎠᏓᏎᎮᏗ Ꮎ ᎯᏍᎩ ᎠᎴᏰᏑ ᎡᏆ ᎢᎨᏍᏙᏗ ᎪᎱᏍᏗ ᎨᏒ, ᏀᎾᎢ ᎨᏒᎢ ᎪᎷᏩᏛᏗ Ꮎ, ᎭᏫᎾᏗᏢ ᎦᎾᏝᎢ, ᎪᎱᏍᏗ ᎨᏒ ᎢᏳᏗᎾ ᎾᏍᏋ ᎠᏟᎶᏍᏗ ᎭᏫᎾᏗᏢ ᎯᎠ ᎤᏅᏥᏓ ᎦᏟᏌᏅ ᎤᎪᏗᏗ ᎠᏰᎸ ᎦᏟᏌᏅ ᎤᎪᏗᏗ ᎧᏁᎢᏍᏙᏗ, ᎠᎴ Ꮎ ᎤᎪᏗᏗ ᎯᎠ ᎤᏤᎵᏛ ᎤᏅᏥᏓ ᎢᎦᎢ ᎤᏝᏅᏛ ᎢᎬᏁᏗ ᎨᏒᎢ ᎬᏔᏅᎯ ᎠᏓᏅᏖᎵᏍᏓᏍᏗ ᎯᎠ ᎡᏆᎯᎨᏍᏙᏗ ᎠᏰᎸ. ᎾᏍᎩ ᎤᏩᏒ ᎠᎠᏂ ᎿᏛᎦ ᎠᏂᏴᏫ ᎤᎭ ᎠᏜᏅᎠᏓᏗᏍᎬ. ᏴᏫ ᎤᏅᏥᏓ ᎪᎯᏳᏙᏗ ᎬᏩᏚᏫᏛ 2% ᎯᎠ ᏴᏫ ᎠᏰᎸ ᎦᏟᏌᏅ ᎤᎪᏗᏗ, ᏀᎢᏳᎢ ᎯᎠ ᏂᎬᏂᏏᏍᎬ ᎤᏔᎾ ᎠᏣᏗ ᎤᏤᎵ ᎤᏅᏥᏓ ᎪᎯᏳᏙᏗ ᎾᏍᎩ ᎤᏩᏒ 0.02% Ꮝ ᎠᏰᎸ ᎦᏟᏌᏅ ᎤᎪᏗᏗ. [[cattle|ᏩᎦ]] ᎤᏅᏥᏓ ᎨᏒᎢ ᏅᎩ ᎠᎴᏰᏑ ᏥᏄᏍᏗ ᎡᏆ ᏥᏄᏍᏗ ᎤᏔᎾ ᎠᏣᏗ ᎤᏤᎵ ᎾᎥᎢ ᎪᎯ ᎠᎦᏛᏗ ᏄᏍᏛ. ᏀᎾ ᎯᎠ ᏐᎢ ᎤᏬᏰᏂ, ᎡᏆ ᎢᎦᏘᎭ ᎤᏔᎾ ᎠᏣᏗ ᎤᏤᎵ ᎠᏰᎸ ᎦᏟᏌᏅ ᎤᎪᏗᏗ ᎨᏒᎢ [[blubber|ᎪᎢ]], ᎦᏙ ᎤᏍᏗ ᎧᏁᎦ ᎢᏯᏛᏁᏗ Ꮭ ᎤᏅᏥᏓ ᎤᎳᏂᎬᎬ, ᎠᎴ ᎪᎯ ᎠᎷᏚᎧᏘ ᎯᎠ ᎧᏁᎢᏍᏙᏗ ᎾᏍᎩ ᏯᏛᎾ. ᏱᏂᎬᏛᎾ, ᎢᎬᏂᏏᏍᎩ cetacean ᏧᏅᏥᏓ ᎤᏯᎾᏛᏁᏗ ᎾᎥᏂᎨᏍᏙᏗ ᏧᏓᎴᎿᎢᎭ ᏂᏛᎴᏅᏓ ᎯᎠ ᏴᏫ ᎤᏅᏥᏓ, ᎢᏧᎳᎭ ᎢᏳᏃ ᎤᏔᎾ ᎠᏣᏗ ᎠᏰᎲ ᎠᏥᎸ ᎪᏢᏗ ᎠᏰᎸ/ᎤᏅᏥᏓ ᏄᏓᎨᏒ ᎧᏁᎢᏍᏙᏗ ᎠᏂᏴᏫ, ᎾᏍᎩ ᎨᏒᎢ ᎾᏍᎩ ᏂᎨᏒᎾ ᎠᏍᏆᏗᏍᏗ ᎠᏓᏎᎮᏗ ᎦᎸᎳᏗ ᎪᎱᏍᏗ ᎨᏒ. ᏄᏦᏍᏛᎾᏊ, "ᎦᏬᎯᎸᏙᏗ ᏂᎦᏛ" ᎤᏅᏥᏓ ᏂᎬᎢ ᎨᏒᎢ ᎾᏍᎩ ᏂᎨᏒᎾ ᏧᏚᎪᏔᏅ ᎠᎦᏛᏗ ᏄᏍᏛ ᎢᎬᏂᏏᏍᎩ ᎾᏍᎩ ᎨᏒᎢ ᎾᏊ ᎤᎾᏅᏛ Ꮎ ᏄᏓᎴᎿᎥ ᎢᎦᏛᎭ ᎯᎠ ᎤᏅᏥᏓ ᎪᏢᎯᏐᏗ ᏄᏓᎴᎿᎥ ᎤᏯᎾᏛᏁᏗ, ᎾᏍᎩ ᎤᎪᏗᏗ ᎤᎾᏙᏢᎯ. [[Hummingbird|ᏩᎴᎳ]]ᎤᎭ ᎢᏧᎳᎭ ᎦᎸᎳᏗᎨᏍᏙᏗ ᎤᏅᏥᏓ--ᎠᏰᎸ ᎧᏁᎢᏍᏙᏗ ᎬᎾᏬᏍᎬ ᎠᏂᏴᏫ. ᎯᎠ ᏐᎢ ᏗᏓᏁᏤᏗ ᎨᏒᎢ ᎯᎠ ᎠᏛᎯᏍᏙᏗ ᎯᎠ ᎤᏅᏥᏓ. ᎾᏍᎩ ᎨᏒᎢ ᏂᎦᎥᏊ ᏚᏓᏂᎸᏨ Ꮎ ᎯᎠ ᎤᏛᏏᏗᏒ ᎯᎠ [[neocortex|ᎤᎾᏙᏢᎯ ᎠᏰᎵ]], ᎢᏧᎳ ᎤᏙᎯᏳᎯᏯ ᎠᎴ ᎦᏃᏢᏥᏙᎯ ᎯᎠ ᎠᏣᏪᏐᎸᏍᏙᏗ ᎯᎠ ᎤᏅᏥᏓ, ᏀᎢᏳᎨᏒ ᏴᏫ ᎠᏓᎴᏂᏍᎬ, ᎤᎭ ᏭᏪᏙᎢ ᎤᎾᏚᏓᎸ ᎾᏍᎩᎾᎢ ᎯᎠ ᎠᏓᎴᏂᏍᎬ ᎪᎱᏍᏗ ᎨᏒ, ᏱᏂᎬᏛᎾ ᎧᏁᎢᏍᏔᏅᎯ. ᎭᏫᎾᏗᏢ ᎤᎪᏗᏗ ᎦᎾᏝᎢ ᎯᎠ ᎤᎾᏙᏢᎯ ᎠᏰᎵ ᎤᎭ ᏑᏓᎵ ᎠᏠᏗ, ᎠᎴ Ꮝ ᏄᏓᎴᎿᎥ ᎤᏯᎾᏛᏁᏗ ᎡᏍᎦᏂ (ᎠᎪᏩᏛᏗ, ᎠᏛᎩᏍᎬ, ᎠᎴ ᎤᏠᏯᏍᏗ) ᎪᏍᏓᏯ ᏄᏓᎴᎿᎥ. ᎯᎠ ᎤᏔᎾ ᎠᏣᏗ ᎤᎾᏙᏢᎯ ᎠᏰᎵ, ᏀᎾ ᎯᎠ ᏐᎢ ᎤᏬᏰᏂ, ᎤᎭ ᎾᏍᎩ ᎤᏩᏒ ᎯᏍᎩ ᎠᏠᏗ, ᎠᎴ ᏀᎾᎢ ᎨᏒᎢ ᎤᏍᏗ ᏗᏎᏍᏗ ᎾᏍᎩ ᎯᎠ ᎠᏠᏗ ᎧᎵ ᏗᏙᎳᎩ ᎤᏯᎾᏛᏁᏗ. ᎪᎯ ᎤᎭ ᎤᏗᏅᏒᎩ ᎢᎦᏛ ᎠᏘᏲᎯᎭ Ꮎ ᎯᎠ ᎤᏔᎾ ᎠᏣᏗ ᎤᏅᏥᏓ ᎤᎭ ᎾᏍᎩ ᏂᎨᏒᎾ ᎦᏛᎬᎢ ᎦᏇᏅᏗ ᎣᏂ ᏧᏩᎫᏛ ᎯᎠ ᏀᎾ ᎢᏴ ᏧᏂᎦᏴᎵᎨ ᎢᏳᎵᏍᏔᏅ ᎯᎠ ᎤᏔᎾ ᎠᏣᏗ ᎤᎩᏒᎩ ᎠᎢᏒ ᎥᎴᏂᏙᎲ ᎠᏣᏅᏗ ᎬᏩᏚᏫᏛ 50 ᎢᏳᏆᏗᏅᏓ ᏧᏕᏘᏴᏓ ᎢᏳ ᏥᎨᏒ.
-
-ᎤᎪᏗᏗ ᏴᏫ, ᎾᏍᎩᎾ ᎨᏒ ᎭᏫᎾᏗᏢ ᎯᎠ ᏭᏕᎵᎬ, ᎤᏬᎯᏳ Ꮎ cetaceans ᎭᏫᎾᏗᏢ ᏂᎦᎥ, ᎠᎴ ᎤᏔᎾ ᎠᏣᏗ ᎭᏫᎾᏗᏢ ᎾᏍᎩᎾ, ᎦᎸᎳᏗᎨᏍᏗ [[intelligence (trait)|ᎣᏍᏛ ᎠᎦᏔᎯ]] ᎡᎿᎢ ᎡᎥ. ᎪᎯ ᎤᏬᎯᏳᏒ ᎤᎭ ᏗᏙᎳᎩ ᏌᏊ ᎠᏰᎵ ᏗᎪᏏᏐᏗ ᏗᎦᏘᎴᎩ [[whaling|ᎤᏔᎾ ᎠᏣᏗ]] (ᎠᏓᎯᏍᏗ ᎤᏔᎾ ᎠᏣᏗ ᎾᏍᎩᎾᎢ ᎠᏓᎾᏅᏗ ᎠᎾᏓᏅᏖᏍᎬ). anisoi ᎤᏔᎾ ᎠᏣᏗ ᎠᎴ ᎠᎺᏉᎯ ᎪᎱᏍᏗ ᎨᏒ ᏗᏙᎳᎩ ᎯᎠ ᎠᎾᏓᏟᏏᏍᎬ ᎾᏛᏁᎲᎢ ᎤᏔᎾ ᎠᏣᏗ ᎠᎴ ᎠᎺᏉᎯ ᎠᎴ ᎤᎾᏤᎵ ᎬᎪᏩᏛᏗ ᎢᎦᎢ ᎤᏝᏅᏛ ᎢᎬᏁᏗ ᎾᏍᎩᎾᎢ ᏗᏛᎪᏔᏅ ᏥᏄᏍᏗ ᎪᎯᏳᏙ ᎦᎶᏄᎮᏛ ᎣᏓᏅᏛ, ᎤᏁᎳᎩ ᎾᏍᎩ ᎾᏍᏊ ᎠᏓᏅᏖᏗ ᎢᏳᏓᎵᎭ ᎨᏯᏔᎯ ᎪᏍᏓᏱ ᎠᏥᏄᎪᏫᏍᎬ ᎯᎠ ᏧᏓᎴᎿᎢ ᎠᏰᎵ ᎯᎠ ᎠᎾᏓᏟᏏᏍᎬ ᎤᏤᎵᏛ ᎠᎴ ᎪᎱᏍᏗ ᎨᏒ ᎡᎿᎢ ᎡᎥ, ᎦᏙ ᎤᏍᏗ ᎠᏠᏗ ᎠᎾᏏᎦᏯ ᎢᏳᏓᎵᎭ ᎠᏦᎠᏎᏙᏗ. ᎠᏓᏁᎸ ᎯᎠ ᎤᏓᏣᏙᏗ ᏄᏓᎴᎿᎥ ᏄᏍᏗᏓᏅ ᎤᏔᎾ ᎠᏣᏗ ᎠᎴ ᎠᏂᏴᏫ, ᎠᎴ ᎯᎠ ᏂᎬᎢ ᎤᏔᎾ ᎠᏣᏗ ᎤᏠᏱᎭᎢ [[dolphin|ᎠᎺᏉᎯ]]ᎠᎴ [[chimpanzee]], ᎾᏍᎩᎾᎢ ᏄᎵᏍᏛ, ᎾᏍᎩ ᎨᏒᎢ ᏭᎶᏒᏍᏔᏅ ᎤᏦᏍᏗ ᎠᎦᏛᏗ ᎾᏍᎩ ᎯᎠ ᏫᏓᎧᏃᏗᏱ ᎠᎦᏛᏗ ᏄᏍᏛ.
+ᎤᎪᏗᏗ ᏴᏫ, ᎾᏍᎩᎾ ᎨᏒ ᎭᏫᎾᏗᏢ ᎯᎠ ᏭᏕᎵᎬ, ᎤᏬᎯᏳ Ꮎ cetaceans ᎭᏫᎾᏗᏢ ᏂᎦᎥ, ᎠᎴ ᎤᏔᎾ ᎠᏣᏗ ᎭᏫᎾᏗᏢ ᎾᏍᎩᎾ, ᎦᎸᎳᏗᎨᏍᏗ [[intelligence (trait)|ᎣᏍᏛ ᎠᎦᏔᎯ]] ᎡᎿᎢ ᎡᎥ. ᎪᎯ ᎤᏬᎯᏳᏒ ᎤᎭ ᏗᏙᎳᎩ ᏌᏊ ᎠᏰᎵ ᏗᎪᏏᏐᏗ ᏗᎦᏘᎴᎩ [[whaling|ᎤᏔᎾ ᎠᏣᏗ]] (ᎠᏓᎯᏍᏗ ᎤᏔᎾ ᎠᏣᏗ ᎾᏍᎩᎾᎢ ᎠᏓᎾᏅᏗ ᎠᎾᏓᏅᏖᏍᎬ). ᎠᏂᏐᎢ ᎤᏔᎾ ᎠᏣᏗ ᎠᎴ ᎠᎺᏉᎯ ᎪᎱᏍᏗ ᎨᏒ ᏗᏙᎳᎩ ᎯᎠ ᎠᎾᏓᏟᏏᏍᎬ ᎾᏛᏁᎲᎢ ᎤᏔᎾ ᎠᏣᏗ ᎠᎴ ᎠᎺᏉᎯ ᎠᎴ ᎤᎾᏤᎵ ᎬᎪᏩᏛᏗ ᎢᎦᎢ ᎤᏝᏅᏛ ᎢᎬᏁᏗ ᎾᏍᎩᎾᎢ ᏗᏛᎪᏔᏅ ᏥᏄᏍᏗ ᎪᎯᏳᏙ ᎦᎶᏄᎮᏛ ᎣᏓᏅᏛ, ᎤᏁᎳᎩ ᎾᏍᎩ ᎾᏍᏊ ᎠᏓᏅᏖᏗ ᎢᏳᏓᎵᎭ ᎨᏯᏔᎯ ᎪᏍᏓᏱ ᎠᏥᏄᎪᏫᏍᎬ ᎯᎠ ᏧᏓᎴᎿᎢ ᎠᏰᎵ ᎯᎠ ᎠᎾᏓᏟᏏᏍᎬ ᎤᏤᎵᏛ ᎠᎴ ᎪᎱᏍᏗ ᎨᏒ ᎡᎿᎢ ᎡᎥ, ᎦᏙ ᎤᏍᏗ ᎠᏠᏗ ᎠᎾᏏᎦᏯ ᎢᏳᏓᎵᎭ ᎠᏦᎠᏎᏙᏗ. ᎠᏓᏁᎸ ᎯᎠ ᎤᏓᏣᏙᏗ ᏄᏓᎴᎿᎥ ᏄᏍᏗᏓᏅ ᎤᏔᎾ ᎠᏣᏗ ᎠᎴ ᎠᏂᏴᏫ, ᎠᎴ ᎯᎠ ᏂᎬᎢ ᎤᏔᎾ ᎠᏣᏗ ᎤᏠᏱᎭᎢ [[dolphin|ᎠᎺᏉᎯ]] ᎠᎴ [[chimpanzee]], ᎾᏍᎩᎾᎢ ᏄᎵᏍᏛ, ᎾᏍᎩ ᎨᏒᎢ ᏭᎶᏒᏍᏔᏅ ᎤᏦᏍᏗ ᎠᎦᏛᏗ ᎾᏍᎩ ᎯᎠ ᏫᏓᎧᏃᏗᏱ ᎠᎦᏛᏗ ᏄᏍᏛ.
 
 ᎯᎠ ᎾᏍᎩᎾ ᎠᏗᏒᏍᏗ ᎭᏫᎾᏗᏢ ᎦᎸᏛ ᎧᏁᏌᎢ cetaceans ᎨᏒᎢ ᎯᎠ ᏂᏓᏙᎳᎬᎾ ᎠᏰᎵ ᎠᎾᏓᏟᏏᏍᎬ ᏅᏏᎾᏒ ᎠᎴ ᎠᏓᏓᎶᏙᏗ ᎠᎦᏎᏍᏙᏗ ᎢᎬᏁᏗ ᎤᎦᎾᏭ ᏅᏏᎾᏒ. Cetaceans, ᎾᏍᎩᎾ ᎨᏒ ᎠᎺᏉᎯ, ᎦᎸᎳᏗᎨᏍᏗ ᎠᎾᏓᏟᏏᏍᎬ, ᎠᎴ ᎭᏫᎾᏗᏢ ᎦᏟᏐᏗᎩ ᎤᏅᏌ ᏂᎦᎥᏊ ᎤᎾᎵᎢᏴ ᎠᏂᏴᏫ. ᏗᎦᏛᏗ ᎢᏧᎳᎭ ᎠᏓᏎᎮᏗ Ꮎ ᎤᏅᏌ ᎠᎾᏓᏟᏏᏍᎬ ᎯᎠ ᎪᏍᏓᏱ ᎠᎴᏂᏙᎲ [[self-aware|ᎣᏩᏒ-ᎦᏯᏙᎲᏍᏗ]]. ᎪᎯ ᎨᏒᎢ ᏌᏊ ᎠᏂᏯᏩᏍᎩ ᏄᎬᏫᏳᏒ ᎦᏃᏢᎩ ᏄᎬᏫᏳᏒ ᎠᎾᏓᏎᎮᎲᎢ Ꮎ cetaceans ᎦᎸᎳᏗᎨᏍᏗ ᎣᏍᏛ ᎠᎦᏔᎯ. ᏱᏂᎬᏛᎾ, ᎩᏟ ᎢᏳᏍᏗ ᎠᎴ ᎤᎪᏗᏗ ᏐᎢ ᎦᏇᏅᏗ ᎡᎿᎢ ᎡᎥ ᎾᏍᎩ ᎾᏍᏇ ᎠᎾᏓᏟᏏᏍᎬ (ᎠᎴ ᎢᏳᏓᎵᎭ ᎥᏓᏅᏖᏍᎬ ᎾᎥᎢ ᎯᎠ ᏴᏫ ᎤᏁᏓᏍᏗ ᎾᏍᏋ ᎣᏍᏛ ᎠᎦᏔᎯ ᎤᏍᏆᎸᎲ ᏯᏛᎿ ᎾᏛᏁᎲᎢ) ᎠᎴ ᎤᎾᏤᎵ ᎠᎦᏎᏍᏙᏗ ᎢᎬᏁᏗ ᎤᎦᎾᏭ ᏅᏏᎾᏒ ᎤᏠᏱᎭ ᏥᏍᏕᏥ ᎡᎳᏗᎨ ᎬᎾᏬᏍᎬ ᎾᏍᎩ ᏏᏆ. ᎠᎺᏉᎯ, ᎠᏓᎵᏍᎦᎾᏁᏗ ᎠᎾᏓᏎᎮᎲᎢ ᎦᎸᎳᏗᎨᏍᏗ ᎦᎶᏄᎮᏛ ᎠᏏᎾᏒᎢ ᎭᏫᎾᏗᏢ ᏗᏛᎪᏔᏅ[http://www.apa.org/monitor/oct04/smarter.html], ᎿᏛᎦ ᎤᏙᎯᏳ ᎤᎶᏒᏍᏗ  ᎤᏲ ᎭᏫᎾᏗᏢ ᎠᎦᏎᏍᏙᏗ ᎢᎬᏁᏗ ᎤᎦᎾᏭ<ref>{{cite web | url=http://www.cbc.ca/health/story/2006/08/18/dolphins-brain.html | title= Maybe dolphins aren't so smart after all, scientist suggests| accessdate=2006-10-24}}</ref><ref>{{cite web | url=http://journals.cambridge.org/action/displayAbstract?fromPage=online&aid=420640 | title=An examination of cetacean brain structure with a novel hypothesis correlating thermogenesis to the evolution of a big brain | accessdate=2006-10-24}}</ref>, ᎦᏙ ᎤᏍᏗ ᎨᏒᎢ ᎠᎦᏎᏍᏔᏅ ᎤᏟ ᎢᎦᎢ ᏚᏳᎪᏛ ᎠᏓᏎᎮᏗ ᎪᎱᏍᏗ ᎨᏒ. 
 
-"ᎾᏀᎢ ᎯᎠ ᏧᏅᏥᏓ ᎤᏔᎾ ᎠᏣᏗ" ᎾᎥᎢ ᎤᏙᏪᎸ ᎤᏓᏅᏗ Simmonds ᏥᏄᏍᏛᎩ ᎦᎴᏴᏔᏅᎯ ᎭᏫᎾᏗᏢ ᎯᎠ ᏕᎪᏪᎸ ᎢᎬᎾᏔᏅᎯ ᎦᎾᏝᎢ ᎾᏛᏁᎲᎢ ᎠᎦᏙᎲᏍᏗ 100 (2006) 103-116. ᎭᏫᎾᏗᏢ ᎪᎯ ᎤᏓᏡᎬ ᎾᏍᎩ ᎨᏒᎢ ᎧᏁᎢᏍᏗᏱ Ꮎ ᎾᏛᏁᎲᎢ ᎠᎴ ᎠᎾᏓᏟᏏᏍᎬ ᎠᏛᎯᏍᏙᏗ ᎧᎵ ᏗᏙᎳᎩ ᎪᎯᏳᏙ ᎪᎱᏍᏗ ᎨᏒ. ᏀᎾ ᎪᎯ ᏥᏍᏕᏥ, ᎯᎠ goweli gowlisgi ᎠᏘᏲᎯᎭ Ꮎ ᎤᏔᎾ ᎠᏣᏗ ᎠᎴ ᎠᎺᏉᎯ ᎦᎸᎳᏗᎨᏍᏗ ᎣᏍᏛ ᎠᎦᏔᎯ ᎤᏁᎳᎩ ᎾᏍᎩ ᎾᏍᏊ ᎤᎪᏗᏗ ᎤᏤᎵ ᏗᎪᏏᏐᏗ ᎨᏒᎢ ᏚᎳᏏᏔᏅᎩ ᏀᎾ ᎠᎺᏉᎯ, ᏥᏄᏍᏗ ᎾᏍᎩ ᎨᏒᎢ ᏰᎵ ᏂᎨᏒᎾ ᎠᎴ ᎦᏟᏐᏗᎩ ᎤᎪᏗ ᏗᎵᎬᏩᎸᏍᎩ ᎾᏛᏁᎲ ᎠᎦᏛᏗ ᏄᏍᏛ ᎠᎴ ᏄᏍᏛ ᏗᎧᏃᏗ ᏀᎾ ᎤᏔᎾ ᎠᏣᏗ ᎭᏫᎾᏗᏢ ᏗᏂᎴᏱᏗᏍᎩ. ᏌᏊ ᎪᎯᏳᏙ ᎪᎱᏍᏗ ᎨᏒ, ᎾᏍᎩ ᎨᏒᎢ ᎠᏘᏲᎯᎭ, ᎨᏒᎢ ᎣᏩᏒ-ᎦᏯᏙᎲᏍᏗ. ᎾᏍᎩ ᎨᏒᎢ ᎠᏘᏲᎯᎭ, ᎤᏁᎳᎩ ᎾᏍᎩ ᎾᏍᏊ ᎯᎠ ᎥᏩᏘᏍᎬ ᎨᏒᎢ ᏙᎢ ᎠᏗᏒᏍᏗ, Ꮎ ᎫᎫ ᎦᏴᏐᎵ ᎠᎺᏉᎯ ᎤᎭ ᏭᏪᏙᎢ ᎤᎾᏓᏎᎮᎸᎩ ᎾᏍᏋ ᏰᎵᏆ ᎢᏯᏛᏁᏗ ᎠᏓᏙᎵᏍᏗ ᎤᏅᏌ ᎭᏫᎾᏗᏢ ᏓᏎᏘ. ᎪᎯ ᎾᏛᏁᎲᎢ ᎠᏰᎲ ᏧᏩᎫᏔᏅᏒ ᎾᏍᎩ ᎤᏩᏒ ᏭᏪᏙᎢ ᎪᏪᎳᏅᎯ ᎭᏫᎾᏗᏢ ᎠᏂᏴᏫ, ᎧᎹᎹ ᎠᎴ ᏗᏟᎶᏍᏔᏅ. ᎾᏍᎩ ᎾᏍᏇ, ᎯᎠ ᎬᏙᏗ ᎪᎱᏍᏗ ᏗᎬᏔᏂᏓᏍᏗ ᎨᏒᎢ ᏄᏓᎴ ᏱᏓᏟᎶᏍᏔᏅ ᎪᎱᏍᏗ ᎨᏒ. ᏱᏓᏟᎶᏍᏔᏅ ᎪᎯ ᎤᏙᏢᏒ ᎪᎱᏍᏗ ᎨᏒ ᎤᎭ ᏭᏪᏙᎢ ᎠᎦᏎᏍᏔᏅ ᎭᏫᎾᏗᏢ ᎿᏛᎦ-ᏄᎶᏒᏍᏛᎾ ᎫᎫ ᎦᏴᏐᎵ ᎠᎺᏉᎯ ᎦᎪ ᎠᏫᏛᏗ ᎦᏚᎵᏓ ᏀᎾ ᎤᎾᏤᎵ ᎢᎬᏱᏗᏢ ᎠᏓᏍᏕᎸᏗ ᎤᏅᏌ ᎯᎳᎪ ᎢᏳ ᎠᎵᏍᏓᏴᏗ ᎾᏍᎩᎾᎢ ᎠᎵᏍᏓᏴᏗ. ᎤᏗᏗᏢ ᎪᎯᏳᏙ ᎪᎱᏍᏗ ᎨᏒ, ᏥᏄᏍᏗ ᎧᏁᎢᏍᏔᏅᎯ ᎾᎥᎢ Simmonds ᎠᏓᏖᎸᏍᎬ ᎢᏯᏛᏁᎵᏓᏍᏗ ᎠᎪᎲᎢ ᎭᏫᎾᏗᏢ ᎠᏂᏴᏫ ᏯᏛᎿ ᏥᏄᏍᏗ ᎤᏲᎠᏰᎸᏗ, ᎠᏓᎦᏴᎵᎨ ᎬᎨᏳᎢ ᎠᎴ ᎤᎵᎮᎵᏍᏗ, ᎤᏁᎳᎩ ᎾᏍᎩ ᎾᏍᏊ ᎾᏍᎩ ᎯᎠ ᏰᎵ ᎣᏏ ᏧᏣᏔᏊ ᎤᏤᎵᏛ ᎤᎪᏗᏗ ᎦᎾᏝᎢ ᎾᏍᎩ ᎨᏒᎢ ᎦᏇᏅᏗ ᎡᎿᎢ ᎡᎥ. ᏄᏓᎴ ᏱᏓᏟᎶᏍᏔᏅ ᎪᎱᏍᏗ ᎨᏒ ᏂᎦᏛ ᎠᎾᏓᏟᏏᏍᎬ ᎠᏥᏅᏏᏓᏍᏗ ᏧᎸᏫᏍᏓᏁᏗ ᎠᎴ ᎠᏛᎯᏍᏙᏗ. ᎾᏍᎩ ᎯᎠ ᎤᏤᎵᏛ ᎠᎪᎲᎢ ᎭᏫᎾᏗᏢ ᎠᎺᏉᎯ ᎠᎴ ᎤᏔᎾ ᎠᏣᏗ. ᏱᏓᏟᎶᏍᏔᏅ ᎠᎴᏂᏙᎲ Ꮎ ᎠᎺᏉᎯ ᎨᏒᎩ ᎠᎦᏎᏍᏔᏅ ᎤᎭ ᎦᏁᏔᏯ ᎠᎴ ᎤᏚᎩ ᎬᏒ ᎾᏍᎩ ᎠᏂᏏᏴᏫᎭ ᏐᎢ ᎠᎴ Ꮎ ᎠᏓᎵᏍᎦᎾᏁᏗ ᎠᏁᎸᏙᏗ vtla amai, ᎠᎴᏂᏙᎲ ᎦᏘᏍᏗ, ᎠᎴ ᎠᏁᎸᏙᏗ ᎦᏃᏍᎩᏏᏓᏍᏗ ᏗᎦᏘᎸᏍᏗ, ᎤᎾᏓᏟᏌᎲ ᎦᎶᏄᎮᏛ ᏗᎯ ᎤᏔᎾ ᎠᏣᏗ ᎦᏄᎯᏒ ᎾᏍᎩᎾᎢ 3 ᎯᎸᏍᎩ ᎢᎦ ᎭᏫᎾᏗᏢ ᎯᎠ ᎤᏅᏬᏓ ᎯᎠ ᎤᏓᏍᏓᏲᎯᏎᏗ Florida, USA ᎠᏓᏍᏕᎸᏗ ᎠᏥᏐᏅᏅᎯ ᎠᏍᎦᏯ. ᎯᎠ ᎠᎺᏉᎯ ᎠᏓᏁᏟᏴᏍᏗ ᎠᏲᏝᏗᏍᏗ ᎯᎳᎪ ᎢᏳ ᎠᏁᎸᏙᏗ ᎾᎥᎢ ᎠᏓᏍᏕᎸᏗ ᎨᏒᎩ ᎪᏢᏅᎯ ᏧᏓᎴᎿᎢ ᎠᏂ. ᎯᎠ ᎠᎺᏉᎯ ᎾᏍᎩ ᎤᏩᏒ ᏙᎯᏄᏍᏛ ᎯᎳᎪ ᎢᏳ ᎠᎵᎪᏗ.
+"ᎾᏀᎢ ᎯᎠ ᏧᏅᏥᏓ ᎤᏔᎾ ᎠᏣᏗ" ᎾᎥᎢ ᎤᏙᏪᎸ ᎤᏓᏅᏗ Simmonds ᏥᏄᏍᏛᎩ ᎦᎴᏴᏔᏅᎯ ᎭᏫᎾᏗᏢ ᎯᎠ ᏕᎪᏪᎸ ᎢᎬᎾᏔᏅᎯ ᎦᎾᏝᎢ ᎾᏛᏁᎲᎢ ᎠᎦᏙᎲᏍᏗ 100 (2006) 103-116. ᎭᏫᎾᏗᏢ ᎪᎯ ᎤᏓᏡᎬ ᎾᏍᎩ ᎨᏒᎢ ᎧᏁᎢᏍᏗᏱ Ꮎ ᎾᏛᏁᎲᎢ ᎠᎴ ᎠᎾᏓᏟᏏᏍᎬ ᎠᏛᎯᏍᏙᏗ ᎧᎵ ᏗᏙᎳᎩ ᎪᎯᏳᏙ ᎪᎱᏍᏗ ᎨᏒ. ᏀᎾ ᎪᎯ ᏥᏍᏕᏥ, ᎯᎠ ᎪᏪᎵ ᎪᏪᎵᏍᏗ ᎠᏘᏲᎯᎭ Ꮎ ᎤᏔᎾ ᎠᏣᏗ ᎠᎴ ᎠᎺᏉᎯ ᎦᎸᎳᏗᎨᏍᏗ ᎣᏍᏛ ᎠᎦᏔᎯ ᎤᏁᎳᎩ ᎾᏍᎩ ᎾᏍᏊ ᎤᎪᏗᏗ ᎤᏤᎵ ᏗᎪᏏᏐᏗ ᎨᏒᎢ ᏚᎳᏏᏔᏅᎩ ᏀᎾ ᎠᎺᏉᎯ, ᏥᏄᏍᏗ ᎾᏍᎩ ᎨᏒᎢ ᏰᎵ ᏂᎨᏒᎾ ᎠᎴ ᎦᏟᏐᏗᎩ ᎤᎪᏗ ᏗᎵᎬᏩᎸᏍᎩ ᎾᏛᏁᎲ ᎠᎦᏛᏗ ᏄᏍᏛ ᎠᎴ ᏄᏍᏛ ᏗᎧᏃᏗ ᏀᎾ ᎤᏔᎾ ᎠᏣᏗ ᎭᏫᎾᏗᏢ ᏗᏂᎴᏱᏗᏍᎩ. ᏌᏊ ᎪᎯᏳᏙ ᎪᎱᏍᏗ ᎨᏒ, ᎾᏍᎩ ᎨᏒᎢ ᎠᏘᏲᎯᎭ, ᎨᏒᎢ ᎣᏩᏒ-ᎦᏯᏙᎲᏍᏗ. ᎾᏍᎩ ᎨᏒᎢ ᎠᏘᏲᎯᎭ, ᎤᏁᎳᎩ ᎾᏍᎩ ᎾᏍᏊ ᎯᎠ ᎥᏩᏘᏍᎬ ᎨᏒᎢ ᏙᎢ ᎠᏗᏒᏍᏗ, Ꮎ ᎫᎫ ᎦᏴᏐᎵ ᎠᎺᏉᎯ ᎤᎭ ᏭᏪᏙᎢ ᎤᎾᏓᏎᎮᎸᎩ ᎾᏍᏋ ᏰᎵᏆ ᎢᏯᏛᏁᏗ ᎠᏓᏙᎵᏍᏗ ᎤᏅᏌ ᎭᏫᎾᏗᏢ ᏓᏎᏘ. ᎪᎯ ᎾᏛᏁᎲᎢ ᎠᏰᎲ ᏧᏩᎫᏔᏅᏒ ᎾᏍᎩ ᎤᏩᏒ ᏭᏪᏙᎢ ᎪᏪᎳᏅᎯ ᎭᏫᎾᏗᏢ ᎠᏂᏴᏫ, ᎧᎹᎹ ᎠᎴ ᏗᏟᎶᏍᏔᏅ. ᎾᏍᎩ ᎾᏍᏇ, ᎯᎠ ᎬᏙᏗ ᎪᎱᏍᏗ ᏗᎬᏔᏂᏓᏍᏗ ᎨᏒᎢ ᏄᏓᎴ ᏱᏓᏟᎶᏍᏔᏅ ᎪᎱᏍᏗ ᎨᏒ. ᏱᏓᏟᎶᏍᏔᏅ ᎪᎯ ᎤᏙᏢᏒ ᎪᎱᏍᏗ ᎨᏒ ᎤᎭ ᏭᏪᏙᎢ ᎠᎦᏎᏍᏔᏅ ᎭᏫᎾᏗᏢ ᎿᏛᎦ-ᏄᎶᏒᏍᏛᎾ ᎫᎫ ᎦᏴᏐᎵ ᎠᎺᏉᎯ ᎦᎪ ᎠᏫᏛᏗ ᎦᏚᎵᏓ ᏀᎾ ᎤᎾᏤᎵ ᎢᎬᏱᏗᏢ ᎠᏓᏍᏕᎸᏗ ᎤᏅᏌ ᎯᎳᎪ ᎢᏳ ᎠᎵᏍᏓᏴᏗ ᎾᏍᎩᎾᎢ ᎠᎵᏍᏓᏴᏗ. ᎤᏗᏗᏢ ᎪᎯᏳᏙ ᎪᎱᏍᏗ ᎨᏒ, ᏥᏄᏍᏗ ᎧᏁᎢᏍᏔᏅᎯ ᎾᎥᎢ Simmonds ᎠᏓᏖᎸᏍᎬ ᎢᏯᏛᏁᎵᏓᏍᏗ ᎠᎪᎲᎢ ᎭᏫᎾᏗᏢ ᎠᏂᏴᏫ ᏯᏛᎿ ᏥᏄᏍᏗ ᎤᏲᎠᏰᎸᏗ, ᎠᏓᎦᏴᎵᎨ ᎬᎨᏳᎢ ᎠᎴ ᎤᎵᎮᎵᏍᏗ, ᎤᏁᎳᎩ ᎾᏍᎩ ᎾᏍᏊ ᎾᏍᎩ ᎯᎠ ᏰᎵ ᎣᏏ ᏧᏣᏔᏊ ᎤᏤᎵᏛ ᎤᎪᏗᏗ ᎦᎾᏝᎢ ᎾᏍᎩ ᎨᏒᎢ ᎦᏇᏅᏗ ᎡᎿᎢ ᎡᎥ. ᏄᏓᎴ ᏱᏓᏟᎶᏍᏔᏅ ᎪᎱᏍᏗ ᎨᏒ ᏂᎦᏛ ᎠᎾᏓᏟᏏᏍᎬ ᎠᏥᏅᏏᏓᏍᏗ ᏧᎸᏫᏍᏓᏁᏗ ᎠᎴ ᎠᏛᎯᏍᏙᏗ. ᎾᏍᎩ ᎯᎠ ᎤᏤᎵᏛ ᎠᎪᎲᎢ ᎭᏫᎾᏗᏢ ᎠᎺᏉᎯ ᎠᎴ ᎤᏔᎾ ᎠᏣᏗ. ᏱᏓᏟᎶᏍᏔᏅ ᎠᎴᏂᏙᎲ Ꮎ ᎠᎺᏉᎯ ᎨᏒᎩ ᎠᎦᏎᏍᏔᏅ ᎤᎭ ᎦᏁᏔᏯ ᎠᎴ ᎤᏚᎩ ᎬᏒ ᎾᏍᎩ ᎠᏂᏏᏴᏫᎭ ᏐᎢ ᎠᎴ Ꮎ ᎠᏓᎵᏍᎦᎾᏁᏗ ᎠᏁᎸᏙᏗ ᎥᏝ ᎠᎹᎢ, ᎠᎴᏂᏙᎲ ᎦᏘᏍᏗ, ᎠᎴ ᎠᏁᎸᏙᏗ ᎦᏃᏍᎩᏏᏓᏍᏗ ᏗᎦᏘᎸᏍᏗ, ᎤᎾᏓᏟᏌᎲ ᎦᎶᏄᎮᏛ ᏗᎯ ᎤᏔᎾ ᎠᏣᏗ ᎦᏄᎯᏒ ᎾᏍᎩᎾᎢ 3 ᎯᎸᏍᎩ ᎢᎦ ᎭᏫᎾᏗᏢ ᎯᎠ ᎤᏅᏬᏓ ᎯᎠ ᎤᏓᏍᏓᏲᎯᏎᏗ Florida, USA ᎠᏓᏍᏕᎸᏗ ᎠᏥᏐᏅᏅᎯ ᎠᏍᎦᏯ. ᎯᎠ ᎠᎺᏉᎯ ᎠᏓᏁᏟᏴᏍᏗ ᎠᏲᏝᏗᏍᏗ ᎯᎳᎪ ᎢᏳ ᎠᏁᎸᏙᏗ ᎾᎥᎢ ᎠᏓᏍᏕᎸᏗ ᎨᏒᎩ ᎪᏢᏅᎯ ᏧᏓᎴᎿᎢ ᎠᏂ. ᎯᎠ ᎠᎺᏉᎯ ᎾᏍᎩ ᎤᏩᏒ ᏙᎯᏄᏍᏛ ᎯᎳᎪ ᎢᏳ ᎠᎵᎪᏗ.
 
-ᏀᎾ ᎯᎠ ᏐᎢ ᎤᏬᏰᏂ, ᏄᏓᎴ, ᎠᎴ ᎢᎦᏛ ᎠᏘᏲᎯᎭ ᎾᏍᏋ ᎤᏟ ᎢᎦᎢ nvwatohiyvda, ᏩᏎᏍᏗ ᏀᎾ ᎨᏒᎢ "ᎯᎠ ᏅᏏᎾᏒ ᎠᏓᏅᏖᏗ gohusdi gesv, ᎠᏟᎶᏍᏙᏗ, ᎤᎦᎾᏭ ᏗᎦᏎᏍᏙᏗ, ᎠᏓᏅᏖᏍᎬ ᎠᏓᏓᎶᏙᏗ, ᎪᏪᎳᏅ ᎠᎪᎵᏰᏗ ᏂᎦᏛ ᎠᏓᏅᏖᏍᎬ, ᎠᏕᎶᏆᏍᏗ ᏄᎵᏍᏛ ᎠᎴ ᎠᏕᎶᏆᏍᏗ ᏂᏛᎴᏅᏓ ᎤᎦᏙᎲᏒ." ᎭᏫᎾᏗᏢ ᎯᎠ ᎦᎸᏛ ᎧᏁᏌᎢ ᎠᎺᏉᎯ, ᎢᎦᏛ ᎧᏁᎢᏍᏗᏱ Ꮎ ᎤᏅᏌ ᎿᏛᎦ ᎤᏲᎢᏳᏛᏀᎡᏕᎩ ᎭᏫᎾᏗᏢ ᎪᎯ ᎪᎯᏳᎯ. ᎭᏫᎾᏗᏢ Ꭺ ᎦᎴᏴᏔᏅᎯ ᎭᏫᎾᏗᏢ ᎤᎾᏙᏢᎯ ᏅᎬᎪᏙᏗ ᎯᎠ ᎪᎱᏍᏗ ᎬᏔᏂᏓᏍᏗ ᎠᏒᏢᎢ ᎤᏬᎳᏨᎯ ᎤᎾᏙᏢᎯ, Paul ᏧᎬᏩᎶᏗ ᎠᎦᏘᏯ ᎠᏘᏲᎯᎭ Ꮎ ᎯᎠ ᏂᎬᎢ cecetarian ᎤᏅᏥᏓ ᎨᏒᎢ ᎯᎠ evolutionary ᏄᎵᏍᏔᏅ ᎤᏚᎳᏗ ᎠᏍᏆᏂᎪᏙᏗ ᎯᎠ ᎤᏅᏥᏓ ᎤᎦᎾᏩ. ᎤᏗᏗᏢ ᏧᎬᏩᎶᏗ ᎠᎦᏘᏯ ᎤᏃᎮᎸᎩ Ꮎ, "ᏂᎯ ᏩᏗᏱ ᎦᎾᏝᎢ ᎭᏫᎾᏗᏢ ᎧᏁᏌᎢ, ᎢᏧᎳᎭ lab ᏥᏍᏕᏥ ᎠᎴ gerbil, ᎠᎴ ᎯᎠ ᎢᎬᏱ ᎢᏳᏍᏗ ᎾᏍᎩ ᎠᏚᎵᎭ ᎿᏛᎦ ᎨᏒᎢ ᎦᎴᎬ ᎠᏥᏄᎪᏫᏍᎬ ᎾᏍᎩ. ᎢᏳᏃ ᏂᎯ ᎫᏢᎥᏍᎬ't ᏩᏗᏱ ᎠᏰᎵ ᏀᎾ ᎦᏚᎢ ᎯᎠ ᎠᏟᏍᏙᏗ ᎠᏕᎸ ᏓᎶᏂᎨ ᎠᏣᏗ ᎾᏍᎩ ᏫᎵ ᏭᎵᏱᎶᎸ ᏓᎵᏔᏕᎬ ᎠᏥᏄᎪᏫᏍᎬ ᎠᏔᏃᎯᏍᏙᏗ ᎯᎠ ᏄᏍᏗᏓᏅ ᎾᏍᎩ ᎨᏒᎢ ᎠᎴᏂᏙᎲ ᎭᏫᎾᏗᏢ,... ᎠᎴ ᎠᎺᏉᎯ ᏫᎵ ᎥᏝ ᎿᏛᎦ Ꮎ. ᎭᏫᎾᏗᏢ ᎯᎠ ᎠᎢᏒ ᎠᏣᏪᏐᎸᏍᏙᏗ, ᎯᎠ ᎠᏯᏔᏍᏗ ᎠᏍᏆᏂᎪᏙᏗ ᎯᎠ ᎠᎺᏉᎯ ᏧᎦᎴᏅᏓ ᎾᏍᎩ ᎤᏩᏒ ᎤᎳᏏᏕᎾ ᎠᎴ ᏔᎵ ᎦᎸᎳᏗᏢ ᎯᎠ ᎠᎹ ᎠᏰᎵ ᎯᎠ ᏄᏓᎴᎿᎥ ᎦᏁᎲ."[http://www.theregister.co.uk/2006/08/21/stupid_dolphins/] 
+ᏀᎾ ᎯᎠ ᏐᎢ ᎤᏬᏰᏂ, ᏄᏓᎴ, ᎠᎴ ᎢᎦᏛ ᎠᏘᏲᎯᎭ ᎾᏍᏋ ᎤᏟ ᎢᎦᎢ ᏅᏩᏙᎯᏴᏓ, ᏩᏎᏍᏗ ᏀᎾ ᎨᏒᎢ "ᎯᎠ ᏅᏏᎾᏒ ᎠᏓᏅᏖᏗ ᎪᎱᏍᏗ ᎨᏒ, ᎠᏟᎶᏍᏙᏗ, ᎤᎦᎾᏭ ᏗᎦᏎᏍᏙᏗ, ᎠᏓᏅᏖᏍᎬ ᎠᏓᏓᎶᏙᏗ, ᎪᏪᎳᏅ ᎠᎪᎵᏰᏗ ᏂᎦᏛ ᎠᏓᏅᏖᏍᎬ, ᎠᏕᎶᏆᏍᏗ ᏄᎵᏍᏛ ᎠᎴ ᎠᏕᎶᏆᏍᏗ ᏂᏛᎴᏅᏓ ᎤᎦᏙᎲᏒ." ᎭᏫᎾᏗᏢ ᎯᎠ ᎦᎸᏛ ᎧᏁᏌᎢ ᎠᎺᏉᎯ, ᎢᎦᏛ ᎧᏁᎢᏍᏗᏱ Ꮎ ᎤᏅᏌ ᎿᏛᎦ ᎤᏲᎢᏳᏛᏀᎡᏕᎩ ᎭᏫᎾᏗᏢ ᎪᎯ ᎪᎯᏳᎯ. ᎭᏫᎾᏗᏢ Ꭺ ᎦᎴᏴᏔᏅᎯ ᎭᏫᎾᏗᏢ ᎤᎾᏙᏢᎯ ᏅᎬᎪᏙᏗ ᎯᎠ ᎪᎱᏍᏗ ᎬᏔᏂᏓᏍᏗ ᎠᏒᏢᎢ ᎤᏬᎳᏨᎯ ᎤᎾᏙᏢᎯ, Paul ᏧᎬᏩᎶᏗ ᎠᎦᏘᏯ ᎠᏘᏲᎯᎭ Ꮎ ᎯᎠ ᏂᎬᎢ cecetarian ᎤᏅᏥᏓ ᎨᏒᎢ ᎯᎠ evolutionary ᏄᎵᏍᏔᏅ ᎤᏚᎳᏗ ᎠᏍᏆᏂᎪᏙᏗ ᎯᎠ ᎤᏅᏥᏓ ᎤᎦᎾᏩ. ᎤᏗᏗᏢ ᏧᎬᏩᎶᏗ ᎠᎦᏘᏯ ᎤᏃᎮᎸᎩ Ꮎ, "ᏂᎯ ᏩᏗᏱ ᎦᎾᏝᎢ ᎭᏫᎾᏗᏢ ᎧᏁᏌᎢ, ᎢᏧᎳᎭ lab ᏥᏍᏕᏥ ᎠᎴ gerbil, ᎠᎴ ᎯᎠ ᎢᎬᏱ ᎢᏳᏍᏗ ᎾᏍᎩ ᎠᏚᎵᎭ ᎿᏛᎦ ᎨᏒᎢ ᎦᎴᎬ ᎠᏥᏄᎪᏫᏍᎬ ᎾᏍᎩ. ᎢᏳᏃ ᏂᎯ ᎫᏢᎥᏍᎬ't ᏩᏗᏱ ᎠᏰᎵ ᏀᎾ ᎦᏚᎢ ᎯᎠ ᎠᏟᏍᏙᏗ ᎠᏕᎸ ᏓᎶᏂᎨ ᎠᏣᏗ ᎾᏍᎩ ᏫᎵ ᏭᎵᏱᎶᎸ ᏓᎵᏔᏕᎬ ᎠᏥᏄᎪᏫᏍᎬ ᎠᏔᏃᎯᏍᏙᏗ ᎯᎠ ᏄᏍᏗᏓᏅ ᎾᏍᎩ ᎨᏒᎢ ᎠᎴᏂᏙᎲ ᎭᏫᎾᏗᏢ,... ᎠᎴ ᎠᎺᏉᎯ ᏫᎵ ᎥᏝ ᎿᏛᎦ Ꮎ. ᎭᏫᎾᏗᏢ ᎯᎠ ᎠᎢᏒ ᎠᏣᏪᏐᎸᏍᏙᏗ, ᎯᎠ ᎠᏯᏔᏍᏗ ᎠᏍᏆᏂᎪᏙᏗ ᎯᎠ ᎠᎺᏉᎯ ᏧᎦᎴᏅᏓ ᎾᏍᎩ ᎤᏩᏒ ᎤᎳᏏᏕᎾ ᎠᎴ ᏔᎵ ᎦᎸᎳᏗᏢ ᎯᎠ ᎠᎹ ᎠᏰᎵ ᎯᎠ ᏄᏓᎴᎿᎥ ᎦᏁᎲ."<ref>[http://www.theregister.co.uk/2006/08/21/stupid_dolphins/]</ref>
 
 ᏂᏛᎴᏅᏓ evolutionary ᎪᏍᏓᏱ ᏗᎧᏃᏗᎢ, ᎪᎯ ᎨᏒᎢ ᎤᏠᏱᎭ ᎬᏙᏗ ᎯᎠ ᏚᎵᏍᎪᎵᏴ [[natural selection|ᏂᎬᏩᏍᏛ ᎠᏑᏰᏍᏗ]]. ᎪᎱᏍᏗ ᎨᏒ ᎾᏛᏁ ᎾᏍᎩ ᏂᎨᏒᎾ ᏗᎶᏗ ᎠᎦᎵᏯ: ᎾᏍᎩᏯᎢ ᏂᎦᎵᏍᏗᏍᎬᎫ ᏐᎢ ᎦᎾᏝᎢ ᎢᎦᎢ ᎤᏝᏅᏛ ᎢᎬᏁᏗ, ᎾᏍᎩ ᎠᏛᎯᏍᏙᏗ ᎭᏫᎾᏗᏢ ᎯᎠ ᎤᎳᏂᎬᎬ ᎯᎠ ᎦᎾᏝᎢ ᎤᏤᎵ ᏄᏍᏗᏓᏅ. ᎯᎠ ᏴᏫ ᎤᏅᏥᏓ ᎤᎭ ᎦᏇᏅᏗ ᎭᏫᎾᏗᏢ ᎯᎠ ᎤᎳᏂᎬᎬ ᏂᎬᏩᏍᏛ ᎠᏑᏰᏍᏗ ᎭᏫᎾᏗᏢ ᏧᏓᎴᎾᎢ ᎡᎶᎯ ᏄᏍᏗᏓᏅ. ᎯᎠ ᏍᏚᎢᏍᏗ ᎠᎵᏣᏙᎲᏍᎩ ᎨᎦᏓᏅᏖᏗ - [[bipedalism]] ᎠᎴ ᎯᎠ [[opposable thumb|ᏗᎦᏘᎸᏍᏗ ᎤᏚᏂᎯᏯᏍᏓ]] - ᎤᏓᏁᎸ ᎯᎠ ᎢᎬᏱ [[Hominidae|hominids]] ᎯᎠ ᏅᏏᎾᏒ ᎠᏒᎾᏍᏗ ᎤᎾᏤᎵ ᏄᏍᏗᏓᏅ ᏗᎬᏩᎶᏒ ᎯᎠ ᎬᏙᏗ [[technology|ᎠᏏᎾᏒᎢ]] (ᎾᎥᎢ ᎠᏃᏢᏍᎬ ᎪᎱᏍᏗ ᏗᎬᏔᏂᏓᏍᏗ). ᎪᎯ ᎢᏯᎨᎵᏏᏓᏍᏗ ᎤᏠᏱ ᏓᏓᏁᏤᎸ ᎪᏢᏅᎯ [[virtuous cycle|ᎾᏍᎦᏅᎾ ᎠᏓᏠᎯᏍᏗ]]: ᎤᏟ ᎢᎦᎢ ᎪᎱᏍᏗ ᎨᏒ ᎠᎴ ᎠᏍᏓᏩᏗᏒ ᎪᎱᏍᏗ ᎬᏔᏂᏓᏍᏗ-ᎠᏃᏢᏍᎬ ᎤᏓᏁᎸ hominids ᎬᏙᏗ ᏧᏚᎪᏔᏅ evolutionary ᎠᏜᏅᎠᏓᏗᏍᎬ, ᏓᏓᏘᏂᏒ ᎡᏆᎯᎨᏍᏙᏗ ᎠᎴ ᎤᏟ ᎢᎦᎢ ᎦᎶᏄᎮᏛ ᎤᏅᏥᏓ ᎤᏯᎾᏛᏁᏗ, ᎠᎴ ᎯᎠ ᎢᏴ ᎤᏟ ᎢᎦᎢ ᎪᎱᏍᏗ ᎬᏔᏂᏓᏍᏗ-ᎠᏃᏢᏍᎬ. ᎪᎯ ᏧᎵᎬᏩᎳᏅᎯ ᎨᏒᎢ ᏌᏊ ᎯᎠ ᎧᏁᎢᏍᏔᏅ ᏗᎪᏏᏌᏅ ᎯᎠ ᏎᏍᏗ ᎤᏛᏏᏗᏒ [[hominid intelligence|hominid ᎪᎱᏍᏗ ᎨᏒ]] ᎦᏬᎯᎸᏙᏗ ᎯᎠ ᏧᏩᎫᏔᏅᏒ ᎢᏳᏆᏗᏅᏓ ᏧᏕᏘᏴᏓ.
 
@@ -63,26 +58,25 @@ Cetaceans ᎤᏂᏯᏙᎸ ᎾᏀᎢ ᏔᎵ ᎠᏓᏅᏍᏗ:
 
 ᎤᎪᏗᏗ ᎤᏔᎾ ᎠᏣᏗ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᎤᎭ ᎦᎶᏄᎮᏛ [[social system|ᎠᎾᏓᏟᏏᏍᎬ ᎢᏯᏛᏁᎵᏓᏍᏗ]]. ᎾᏍᎩ ᎤᎭ ᏭᏪᏙᎢ ᎪᎷᏩᏛᏓ Ꮎ ᎤᏅᏌ ᏰᎵᏇ ᎠᏓᏙᎵᏍᏗ ᎠᎴ ᏄᏓᎴᎿᎥ ᎠᏂᏏᏴᏫᎭ ᎠᏂᏏᏴᏫᎭ. ᎤᎪᏗᏗ ᏐᎢ ᎡᎿᎢ ᎡᎥ, ᎠᏠᏯᏍᏗᏍᎩ [[insect|ᏨᏍᎪᏱ]], ᎤᎭ ᏂᎦᏛ ᎠᎾᏓᏟᏏᏍᎬ ᎢᏯᏛᏁᎵᏓᏍᏗ, ᎠᎴ ᎤᎪᏗᏗ ᎠᏂᏐᎢ, ᏯᏛᎿ ᏥᏄᏍᏗ ᎯᎸᏍᎩ ᏥᏍᏆ, ᎤᎭ ᎦᎶᏄᎮᏛ ᏧᎾᏓᏛᎪᏔᏅ. ᎤᏔᎾ ᎠᏣᏗ ᎾᏍᎩ ᎾᏍᏇ ᎤᎭ ᎤᏙᎯᏳ ᏄᎵᏂᎬᎬ ᎠᏛᎩᏍᎬ ᎬᏙᏗ ᎠᏔᎴᏒ ᎠᎹᏱ ᎤᏙᎷᏩᏛᏓ ᏀᎾ ᎨᏒ ᎤᏅᏥᏓ ᎦᏙ ᎤᏍᏗ ᎢᏚᏳᎪᏛ ᎪᎯ ᎤᏯᎾᏛᏁᏗ, ᎦᏙ ᎤᏍᏗ ᎠᏓᏁᏗ ᎠᏂ ᎠᏓᏌᎳᏙᏗ ᎤᏃᏴᎬ ᏂᏓᏳᏨᏓ-ᎦᎷᎯᏍᏗ ᎢᎦᎢ ᎤᏝᏅᏛ ᎢᎬᏁᏗ ᎢᏧᎳᎭ ᎤᏟ ᎢᎦᎢ ᎠᏓᏌᎳᏙᏗ ᎬᎾᏬᏍᎬ ᎠᏍᎦᏯ-ᎪᏢᏅᎯ [[sonar]] - ᎤᏯᎾᏛᏁᏗ ᎠᏩᏛᏗ ᎭᏫᎾᏗᏢ Ꮭ ᏐᎢ ᎠᏁᎳᏅᎯ ᎾᏍᎩ ᎤᏩᏒ ᏐᎢ cetaceans, ᏝᎺᎭ, ᎠᎴ ᏰᎵᏊ ᏱᎩ ᎤᏓᏅᏖᏗ.
 
-ᎤᏟ ᎢᎦᎢ ᏝᏱᎪᎯᎩ, ᎾᏍᎩ ᎤᎭ ᎾᏍᎩ ᎾᏍᏇ ᏭᏪᏙᎢ ᎧᏁᎢᏍᏔᏅ Ꮎ ᎯᎠ ᏗᎦᏃᏢᎩ ᎡᏆ ᏧᏅᏥᏓ cetaceans ᎢᎬᏱᏗᏢ ᎤᎭ thermoregulatory ᎤᏯᎾᏛᏁᏗ <ref>ᏧᎬᏩᎶᏗ ᎠᎦᏘᏯ, P.R. (2006). ᎠᏥᎪᎵᏰᏗ cetacean ᎤᏅᏥᏓ ᎠᏛᎯᏍᏙᏗ ᎬᏙᏗ ᏗᎪᎵᏰᏗ ᎪᏪᎵ ᏄᏍᏗᏓᏅ utloyi nagvneha thermogenesis ᎯᎠ ᎠᏓᎴᏂᏍᎬ ᎡᏆ ᎤᏅᏥᏓ. ''ᎪᎱᏍᏗ ᎬᏔᏂᏓᏍᏗ ᎠᏒᏢᎢ ᎤᏬᎳᏨᎯ ᎤᎾᏙᏢᎯ- ᎤᎾᏙᏢᎯ ᏅᎬᎪᏙᏗ'' '''81(2)''':293-338</ref> ᎠᎴ ᎤᎭ ᎤᏍᏗ ᎿᏛᎦ ᎬᏙᏗ ᎪᎱᏍᏗ ᎨᏒ.
+ᎤᏟ ᎢᎦᎢ ᏝᏱᎪᎯᎩ, ᎾᏍᎩ ᎤᎭ ᎾᏍᎩ ᎾᏍᏇ ᏭᏪᏙᎢ ᎧᏁᎢᏍᏔᏅ Ꮎ ᎯᎠ ᏗᎦᏃᏢᎩ ᎡᏆ ᏧᏅᏥᏓ cetaceans ᎢᎬᏱᏗᏢ ᎤᎭ thermoregulatory ᎤᏯᎾᏛᏁᏗ <ref>ᏧᎬᏩᎶᏗ ᎠᎦᏘᏯ, P.R. (2006). ᎠᏥᎪᎵᏰᏗ cetacean ᎤᏅᏥᏓ ᎠᏛᎯᏍᏙᏗ ᎬᏙᏗ ᏗᎪᎵᏰᏗ ᎪᏪᎵ ᏄᏍᏗᏓᏅ ᎤᏠᏱ ᎾᎬᏁᎭ thermogenesis ᎯᎠ ᎠᏓᎴᏂᏍᎬ ᎡᏆ ᎤᏅᏥᏓ. ''ᎪᎱᏍᏗ ᎬᏔᏂᏓᏍᏗ ᎠᏒᏢᎢ ᎤᏬᎳᏨᎯ ᎤᎾᏙᏢᎯ- ᎤᎾᏙᏢᎯ ᏅᎬᎪᏙᏗ'' 81(2):293-338</ref> ᎠᎴ ᎤᎭ ᎤᏍᏗ ᎿᏛᎦ ᎬᏙᏗ ᎪᎱᏍᏗ ᎨᏒ.
 
 == ᎤᏔᎾ ᎠᏣᏗ ᎠᎴ ᎠᏂᏴᏫ ==
-{{Main|Whaling}}
 [[File:18th century arctic whaling.jpg|thumb|200px|right|ᏁᎳᏚᏏᏁ ᏍᎪᎯᏧᏈ ᏧᏕᏘᏴᏗ ᎢᏯᏓᏛᏁᎸ  Dutch ᎤᏔᎾ ᎠᏣᏗ ᎠᏂᏃᎯᎵᏙᎲ [[Bowhead Whale|ᎦᎵᏣᏗ ᎠᏍᎪᎵ ᎤᏔᎾ ᎠᏣᏗ]] ᎭᏫᎾᏗᏢ ᎯᎠ [[Arctic|ᏗᎦᏘᎸᏍᏗ]]. [[Beerenberg]] ᏀᎾ [[Jan Mayen Land|Jan Mayen ᎦᏙᎯ]] ᏰᎵᏇ ᎾᏍᏋ ᎠᎪᎲᎢ ᎭᏫᎾᏗᏢ ᎯᎠ ᎣᎾᏗᏢ.]]
-ᎢᎦᏛ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᎡᏆ ᎤᏔᎾ ᎠᏣᏗ ᎦᎾᏰᎬ ᏥᏄᏍᏗ ᏄᎵᏍᏔᏅ ᎡᏆ-ᏗᎦᏛᏗ [[whaling|ᎤᏔᎾ ᎠᏣᏗ]] ᏀᎢᏳᎨᏒ ᎯᎠ ᏐᏁᎳᏚ ᎠᎴ ᏔᎵᏍᎪᎯᏁ ᏍᎪᎯᏧᏈ ᏧᏕᏘᏴᏗ. ᎾᏍᎩᎾᎢ ᏍᎪᎯᏧᏈ ᏧᏕᏘᏴᏗ ᎡᏆ ᎤᏔᎾ ᎠᏣᏗ ᎤᎭ ᏭᏪᏙᎢ ᎦᏃᎭᎵᏓᏍᏗ ᎾᏍᎩᎾᎢ ᎪᎢ, ᎭᏫᏯ, ᏗᏓᏁᏍᎩ ᎠᎴ [[ambergris|ᎠᏍᎦᏂ]] (ᎠᎵᏍᏚᏟᏍᏗ ᏑᏓᎴᎩ ᏂᏛᎴᏅᏓ ᎯᎠ ᏧᎵᎦᏏ [[sperm whale|ᏂᎬᏂᏏᏍᎬ ᎤᏔᎾ ᎠᏣᏗ]]). ᎾᎥᎢ ᎯᎠ ᎠᏰᎵ ᎯᎠ 20th ᏍᎪᎯᏧᏈ ᏧᏕᏘᏴᏗ, ᎤᏔᎾ ᎠᏣᏗ ᎠᎦᏍᎦᏂ ᎤᎪᏗᏗ ᎾᏂᎥ ᏴᏫ ᎤᎶᏒᏍᏔᏅᎯ unigisv. ᎯᎠ [[International Whaling Commission|ᎠᏰᎵ ᏚᎾᏙᏢᏒ ᎤᏔᎾ ᎠᏣᏗ ᎠᏂᎧᎻᏏᏂ]] ᎬᏂᎨᏒ ᏄᏩᏁᎸ ᏑᏓᎵ ᏑᏕᏘᏴᏓ ᎤᏓᎪᏂᏲᎢᏍᏗ ᏀᎾ ᏂᎦᏛ ᎠᏓᎾᏅᏗ ᎤᏔᎾ ᎠᏣᏗ ᎭᏫᎾᏗᏢ 1986, ᎯᎠ ᎤᏓᎪᏂᏲᎢᏍᏗ ᏥᏄᏍᏛᎩ ᎤᏍᏆᎸᎲ ᎾᏍᏋ ᎠᏌᎳᏙᏗ ᎭᏫᎾᏗᏢ 1992 ᎠᎴ ᎤᎭ ᏭᏪᏙᎢ ᎧᏁᏉᏛ ᎩᎳ ᎯᎠ ᎡᏙᎠ ᎢᎦ . ᎾᏍᎩᎾᎢ ᏧᏓᎴᏅᏓ ᎠᎾᏓᏅᏖᏍᎬ ᎢᎦᏛ ᏗᎦᏘᎸᏓ ᎪᎯ ᎤᏓᎪᏂᏲᎢᏍᏗ ᎬᏂᎨᏒ ᏄᏍᏗ; ᎠᎵᏱᎵᏒ ᎧᏃᎮᏗ ᎤᏔᎾ ᎠᏣᏗ ᎠᏰᎵ ᏚᎾᏙᏢᏒ [[Norway|ᎠᎴ ᎾᏍᎩ ᏂᎨᏒᎾ ᎦᎶᎯᏍᏗ]], [[Iceland|ᎤᏁᏍᏓᎳ ᎦᏙᎯ]] ᎠᎴ [[Japan|ᎠᏰᎵ]] ᎠᎴ ᎯᎠ ᏅᏁᎯᏯ ᎾᎥ ᏄᎾᏓᎸ [[Siberia|ᎤᏴᏢ]], [[Alaska]] ᎠᎴ ᎤᏴᏢ ᎢᏗᏢ [[Canada|ᏰᎵᏇ ᎠᏓ]]. ᎾᏍᎩᎾᎢ ᏂᏕᎬᎿᏅᎢ, ᎠᎪᏩᏛᏗ [[whaling|ᎤᏔᎾ ᎠᏣᏗ]].
+ᎢᎦᏛ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᎡᏆ ᎤᏔᎾ ᎠᏣᏗ ᎦᎾᏰᎬ ᏥᏄᏍᏗ ᏄᎵᏍᏔᏅ ᎡᏆ-ᏗᎦᏛᏗ [[whaling|ᎤᏔᎾ ᎠᏣᏗ]] ᏀᎢᏳᎨᏒ ᎯᎠ ᏐᏁᎳᏚ ᎠᎴ ᏔᎵᏍᎪᎯᏁ ᏍᎪᎯᏧᏈ ᏧᏕᏘᏴᏗ. ᎾᏍᎩᎾᎢ ᏍᎪᎯᏧᏈ ᏧᏕᏘᏴᏗ ᎡᏆ ᎤᏔᎾ ᎠᏣᏗ ᎤᎭ ᏭᏪᏙᎢ ᎦᏃᎭᎵᏓᏍᏗ ᎾᏍᎩᎾᎢ ᎪᎢ, ᎭᏫᏯ, ᏗᏓᏁᏍᎩ ᎠᎴ [[ambergris|ᎠᏍᎦᏂ]] (ᎠᎵᏍᏚᏟᏍᏗ ᏑᏓᎴᎩ ᏂᏛᎴᏅᏓ ᎯᎠ ᏧᎵᎦᏏ [[sperm whale|ᏂᎬᏂᏏᏍᎬ ᎤᏔᎾ ᎠᏣᏗ]]). ᎾᎥᎢ ᎯᎠ ᎠᏰᎵ ᎯᎠ 20th ᏍᎪᎯᏧᏈ ᏧᏕᏘᏴᏗ, ᎤᏔᎾ ᎠᏣᏗ ᎠᎦᏍᎦᏂ ᎤᎪᏗᏗ ᎾᏂᎥ ᏴᏫ ᎤᎶᏒᏍᏔᏅᎯ ᎤᏂᎩᏒ. ᎯᎠ [[International Whaling Commission|ᎠᏰᎵ ᏚᎾᏙᏢᏒ ᎤᏔᎾ ᎠᏣᏗ ᎠᏂᎧᎻᏏᏂ]] ᎬᏂᎨᏒ ᏄᏩᏁᎸ ᏑᏓᎵ ᏑᏕᏘᏴᏓ ᎤᏓᎪᏂᏲᎢᏍᏗ ᏀᎾ ᏂᎦᏛ ᎠᏓᎾᏅᏗ ᎤᏔᎾ ᎠᏣᏗ ᎭᏫᎾᏗᏢ 1986, ᎯᎠ ᎤᏓᎪᏂᏲᎢᏍᏗ ᏥᏄᏍᏛᎩ ᎤᏍᏆᎸᎲ ᎾᏍᏋ ᎠᏌᎳᏙᏗ ᎭᏫᎾᏗᏢ 1992 ᎠᎴ ᎤᎭ ᏭᏪᏙᎢ ᎧᏁᏉᏛ ᎩᎳ ᎯᎠ ᎡᏙᎠ ᎢᎦ. ᎾᏍᎩᎾᎢ ᏧᏓᎴᏅᏓ ᎠᎾᏓᏅᏖᏍᎬ ᎢᎦᏛ ᏗᎦᏘᎸᏓ ᎪᎯ ᎤᏓᎪᏂᏲᎢᏍᏗ ᎬᏂᎨᏒ ᏄᏍᏗ; ᎠᎵᏱᎵᏒ ᎧᏃᎮᏗ ᎤᏔᎾ ᎠᏣᏗ ᎠᏰᎵ ᏚᎾᏙᏢᏒ [[Norway]], [[Iceland]] ᎠᎴ [[Japan|ᏣᏩᏂᏏ]] ᎠᎴ ᎯᎠ ᏅᏁᎯᏯ ᎾᎥ ᏄᎾᏓᎸ [[Siberia]], [[Alaska|ᎠᎳᏍᎦ]] ᎠᎴ ᎤᏴᏢ ᎢᏗᏢ [[Canada|ᎧᎾᏓ]]. ᎾᏍᎩᎾᎢ ᏂᏕᎬᎿᏅᎢ, ᎠᎪᏩᏛᏗ [[whaling|ᎤᏔᎾ ᎠᏣᏗ]].
 
-ᎯᎸᏍᎩ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᎤᏍᏗ ᎤᏔᎾ ᎠᏣᏗ ᎦᏂᏴᏛ ᏥᏄᏍᏗ [[bycatch]] ᎭᏫᎾᏗᏢ ᎤᏓᏅᏘ ᎾᏍᎩᎾᎢ ᏐᎢ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ. ᎭᏫᎾᏗᏢ ᎯᎠ tuna ᎤᏓᏅᏘ ᎭᏫᎾᏗᏢ ᎯᎠ ᎧᎸᎬᎢᏗᏢ ᎤᎦᎾᏭ ᏄᎶᏒᏍᏛᎾ ᎯᎸᏍᎩ ᎢᏯᎦᏴᎵ ᎠᎺᏉᎯ ᏯᏓᎢᏗᏏ ᎫᏂᏍᎧ ᎭᏫᎾᏗᏢ ᎪᎱᏍᏗ ᎦᎸᏙᏗ-ᎠᎦᏯᎷᏗ ᎦᎸᎳᏗᏢ ᏚᎵᎬᏩᎳᏅ, ᎠᎴᏰᏑ ᏗᏟᎶᏍᏗ ᎠᎴᏫᏍᏔᏅ ᎪᎯ ᎨᏒᎩ ᎬᏂᎨᏒ ᏄᏩᏁᎸ. ᎠᎾᏑᎲᏍᎬ ᏰᎵ ᏄᎵᏂᎬᎬᎾ ᎠᎴ ᎤᏚᏃᎯᏍᏔᏍᎧ ᏧᏓᎴᎿᎢ, ᎠᎴ elohi-ᏚᏙᎥ ᎦᏯᎸ (''ᎠᎺᏉᎯ-ᏂᎦᎾᏰᎬᎾ'' ᎠᎴ ''ᎠᎺᏉᎯ-ᎤᎾᎵᎢᏴ'' ᎦᎴᏴᏛ ᏔᎷᎩᏍᎩ ᎦᎸᏔᏅ tuna), ᎤᎭ ᎠᎵᏍᎪᎸᏙᏗ ᎠᎦᏎᏍᏔᏅ 96% ᎠᎦᏲᎳᏗᏍᏗ ᎭᏫᎾᏗᏢ ᎯᎠ ᏴᏫ ᎠᎺᏉᎯ ᎾᎥᎢ tuna ᎠᎾᏑᎲᏍᎬ ᏧᎬᏩᎶᏗ ᎠᎦᏘᏯ ᎭᏫᎾᏗᏢ ᎾᏞᎬ ᏧᏕᏘᏴᏓ. ᎭᏫᎾᏗᏢ ᎤᎪᏗᏗ ᎠᏰᎵ ᏚᎾᏙᏢᏩᏗᏒ, ᎤᏍᏗ ᎤᏔᎾ ᎠᏣᏗ ᏙᎢ ᎦᏃᎭᎵᏓᏍᏗ ᎾᏍᎩᎾᎢ ᎠᎵᏍᏓᏴᏗ, ᎪᎢ, ᎭᏫᏯ ᎠᎴ ᎠᏑᏗ ᎦᏙᏗ.
+ᎯᎸᏍᎩ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᎤᏍᏗ ᎤᏔᎾ ᎠᏣᏗ ᎦᏂᏴᏛ ᏥᏄᏍᏗ [[bycatch]] ᎭᏫᎾᏗᏢ ᎤᏓᏅᏘ ᎾᏍᎩᎾᎢ ᏐᎢ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ. ᎭᏫᎾᏗᏢ ᎯᎠ tuna ᎤᏓᏅᏘ ᎭᏫᎾᏗᏢ ᎯᎠ ᎧᎸᎬᎢᏗᏢ ᎤᎦᎾᏭ ᏄᎶᏒᏍᏛᎾ ᎯᎸᏍᎩ ᎢᏯᎦᏴᎵ ᎠᎺᏉᎯ ᏯᏓᎢᏗᏏ ᎫᏂᏍᎧ ᎭᏫᎾᏗᏢ ᎪᎱᏍᏗ ᎦᎸᏙᏗ-ᎠᎦᏯᎷᏗ ᎦᎸᎳᏗᏢ ᏚᎵᎬᏩᎳᏅ, ᎠᎴᏰᏑ ᏗᏟᎶᏍᏗ ᎠᎴᏫᏍᏔᏅ ᎪᎯ ᎨᏒᎩ ᎬᏂᎨᏒ ᏄᏩᏁᎸ. ᎠᎾᏑᎲᏍᎬ ᏰᎵ ᏄᎵᏂᎬᎬᎾ ᎠᎴ ᎤᏚᏃᎯᏍᏔᏍᎧ ᏧᏓᎴᎿᎢ, ᎠᎴ [[ᎡᎵᎯ]]-ᏚᏙᎥ ᎦᏯᎸ (''ᎠᎺᏉᎯ-ᏂᎦᎾᏰᎬᎾ'' ᎠᎴ ''ᎠᎺᏉᎯ-ᎤᎾᎵᎢᏴ'' ᎦᎴᏴᏛ ᏔᎷᎩᏍᎩ ᎦᎸᏔᏅ tuna), ᎤᎭ ᎠᎵᏍᎪᎸᏙᏗ ᎠᎦᏎᏍᏔᏅ 96% ᎠᎦᏲᎳᏗᏍᏗ ᎭᏫᎾᏗᏢ ᎯᎠ ᏴᏫ ᎠᎺᏉᎯ ᎾᎥᎢ tuna ᎠᎾᏑᎲᏍᎬ ᏧᎬᏩᎶᏗ ᎠᎦᏘᏯ ᎭᏫᎾᏗᏢ ᎾᏞᎬ ᏧᏕᏘᏴᏓ. ᎭᏫᎾᏗᏢ ᎤᎪᏗᏗ ᎠᏰᎵ ᏚᎾᏙᏢᏩᏗᏒ, ᎤᏍᏗ ᎤᏔᎾ ᎠᏣᏗ ᏙᎢ ᎦᏃᎭᎵᏓᏍᏗ ᎾᏍᎩᎾᎢ ᎠᎵᏍᏓᏴᏗ, ᎪᎢ, ᎭᏫᏯ ᎠᎴ ᎠᏑᏗ ᎦᏙᏗ.
 
-ᏄᏍᏗᏓᏅ ᎤᎭ ᎦᏅᎯᏓ ᎠᏘᏲᎯᎭ Ꮎ ᎢᎦᏛ cetaceans, ᎠᏠᏯᏍᏗᏍᎩ ᎤᏔᎾ ᎠᏣᏗ, ᎦᎾᏰᎬ ᎾᎥᎢ [[sonar]] ᎬᏔᏅᎯ ᎾᎥᎢ ᎠᏓᏌᎳᏙᏗ ᎠᎺᏉᎯ ᎠᏂᏯᏫᏍᎩ. ᎭᏫᎾᏗᏢ 2003 ᎩᎵᏏ ᎠᎴ Spanish ᎠᏓᏅᏖᏗ ᎧᏁᎢᏍᏔᏅ ᎭᏫᎾᏗᏢ ''[[Nature (journal)|ᎤᏁᎳᏅ ᎤᏬᏢᏅ]]'' Ꮎ sonar ᎨᏒᎢ ᏗᎵᎪᏔᏅ ᎤᏔᎾ ᎠᏣᏗ ᎠᎹᏳᎳᏗ ᎠᎴ ᎪᏪᎵᎠ Ꮎ ᎯᎠ ᎠᎹᏳᎳᏗ ᎤᏔᎾ ᎠᏣᏗ ᎤᎭ ᎤᎦᏙᎲᏒᎢ ᏓᏓᏁᏤᎸ ᎤᏢᏥᏰᏍᎩ. <ref>{{cite web| url=http://news.bbc.co.uk/2/hi/science/nature/3173942.stm|title=Sonar may cause Whale deaths|publisher=BBC News|date=2003-10-08|accessdate=2006-09-14}}</ref> ᎦᏟᏌᏅ ᎤᎪᏗᏗ [[beached whale|ᎤᏔᎾ ᎠᏣᏗ ᎠᎹᏳᎳᏗ]]ᏄᎵᏍᏔᏅ ᎭᏫᎾᏗᏢ ᎤᎪᏗᏗ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ, ᎾᏍᎩ ᎤᎪᏗᏗ ᎠᏗᏌᏓᏗᏍᏗ ᎤᏔᎾ ᎠᏣᏗ Ꮎ ᎬᏙᏗ ᎤᏃᏴᎬ ᏂᏓᏳᏨᏓ ᎦᎷᎯᏍᏗ ᎢᏯᏛᏁᎵᏓᏍᏗ ᎾᏍᎩᎾᎢ ᎠᏍᏛᎩ ᏗᎵᎬᏯᏍᏗ). ᎯᎠ ᏄᎶᏒᏍᏛᎾ ᎠᎴ ᏂᎬᎢ ᎠᎹᏳᎳᏗ ᏴᏩᏚᏫᏛ ᎯᎠ ᎡᎶᎯ, ᎪᏪᎳᏅᎯ ᎦᏬᎯᎸᏙᏗ ᎯᎠ ᎣᏂ 1,000 ᏧᏕᏘᏴᏓ ᎭᏫᎾᏗᏢ ᏧᏁᎸᏗᏯ ᎧᏃᎮᎸᏍᎩ ᎠᎴ ᎤᏟ ᎢᎦᎢ ᏝᏱᎪᎯᎩ ᎭᏫᎾᏗᏢ ᎠᏏᎾᏍᏛ ᎠᏟᎶᏍᏗ ᎦᏙᎯ, ᎤᎭ ᏭᏪᏙᎢ ᎬᏔᏅᎯ ᎠᎦᏎᏍᏙᏗ ᎯᎠ ᎦᏁᏟᏴᏍᎬ ᎾᏂᎥ ᏴᏫ ᏂᎬᎢ ᏧᏓᎴᏅᏓ ᎤᏔᎾ ᎠᏣᏗ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᎾᎥᎢ ᏃᎵᏍᎬᎢ Ꮎ ᎯᎠ ᎢᎦᏘᎭ ᎯᎠ ᏂᎦᏛ ᎦᏟᏌᏅ ᎤᏔᎾ ᎠᏣᏗ ᎾᏂᎥ ᏴᏫ ᎠᎹᏳᎳᏗ ᎭᏫᎾᏗᏢ ᏂᎦᎵᏍᏗᏍᎬᎫ ᏌᏊ ᏑᏕᏘᏴᏓ ᎨᏒᎢ ᏂᎪᎯᎸ. <!--(reference?)-->
+ᏄᏍᏗᏓᏅ ᎤᎭ ᎦᏅᎯᏓ ᎠᏘᏲᎯᎭ Ꮎ ᎢᎦᏛ cetaceans, ᎠᏠᏯᏍᏗᏍᎩ ᎤᏔᎾ ᎠᏣᏗ, ᎦᎾᏰᎬ ᎾᎥᎢ [[sonar]] ᎬᏔᏅᎯ ᎾᎥᎢ ᎠᏓᏌᎳᏙᏗ ᎠᎺᏉᎯ ᎠᏂᏯᏫᏍᎩ. ᎭᏫᎾᏗᏢ 2003 ᎩᎵᏏ ᎠᎴ [[Spanish|ᏍᏆᏂ]] ᎠᏓᏅᏖᏗ ᎧᏁᎢᏍᏔᏅ ᎭᏫᎾᏗᏢ ''[[Nature (journal)|ᎤᏁᎳᏅ ᎤᏬᏢᏅ]]'' Ꮎ sonar ᎨᏒᎢ ᏗᎵᎪᏔᏅ ᎤᏔᎾ ᎠᏣᏗ ᎠᎹᏳᎳᏗ ᎠᎴ ᎪᏪᎵᎠ Ꮎ ᎯᎠ ᎠᎹᏳᎳᏗ ᎤᏔᎾ ᎠᏣᏗ ᎤᎭ ᎤᎦᏙᎲᏒᎢ ᏓᏓᏁᏤᎸ ᎤᏢᏥᏰᏍᎩ. <ref>{{cite web| url=http://news.bbc.co.uk/2/hi/science/nature/3173942.stm|title=Sonar may cause Whale deaths|publisher=BBC News|date=2003-10-08|accessdate=2006-09-14}}</ref> ᎦᏟᏌᏅ ᎤᎪᏗᏗ [[beached whale|ᎤᏔᎾ ᎠᏣᏗ ᎠᎹᏳᎳᏗ]] ᏄᎵᏍᏔᏅ ᎭᏫᎾᏗᏢ ᎤᎪᏗᏗ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ, ᎾᏍᎩ ᎤᎪᏗᏗ ᎠᏗᏌᏓᏗᏍᏗ ᎤᏔᎾ ᎠᏣᏗ Ꮎ ᎬᏙᏗ ᎤᏃᏴᎬ ᏂᏓᏳᏨᏓ ᎦᎷᎯᏍᏗ ᎢᏯᏛᏁᎵᏓᏍᏗ ᎾᏍᎩᎾᎢ ᎠᏍᏛᎩ ᏗᎵᎬᏯᏍᏗ). ᎯᎠ ᏄᎶᏒᏍᏛᎾ ᎠᎴ ᏂᎬᎢ ᎠᎹᏳᎳᏗ ᏴᏩᏚᏫᏛ ᎯᎠ ᎡᎶᎯ, ᎪᏪᎳᏅᎯ ᎦᏬᎯᎸᏙᏗ ᎯᎠ ᎣᏂ 1,000 ᏧᏕᏘᏴᏓ ᎭᏫᎾᏗᏢ ᏧᏁᎸᏗᏯ ᎧᏃᎮᎸᏍᎩ ᎠᎴ ᎤᏟ ᎢᎦᎢ ᏝᏱᎪᎯᎩ ᎭᏫᎾᏗᏢ ᎠᏏᎾᏍᏛ ᎠᏟᎶᏍᏗ ᎦᏙᎯ, ᎤᎭ ᏭᏪᏙᎢ ᎬᏔᏅᎯ ᎠᎦᏎᏍᏙᏗ ᎯᎠ ᎦᏁᏟᏴᏍᎬ ᎾᏂᎥ ᏴᏫ ᏂᎬᎢ ᏧᏓᎴᏅᏓ ᎤᏔᎾ ᎠᏣᏗ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᎾᎥᎢ ᏃᎵᏍᎬᎢ Ꮎ ᎯᎠ ᎢᎦᏘᎭ ᎯᎠ ᏂᎦᏛ ᎦᏟᏌᏅ ᎤᏔᎾ ᎠᏣᏗ ᎾᏂᎥ ᏴᏫ ᎠᎹᏳᎳᏗ ᎭᏫᎾᏗᏢ ᏂᎦᎵᏍᏗᏍᎬᎫ ᏌᏊ ᏑᏕᏘᏴᏓ ᎨᏒᎢ ᏂᎪᎯᎸ. <!--(reference?)-->
 
-ᎠᏓᎵᏍᎦᎾᏁᏗ ᎯᎠ ᎤᏂᏃᏝᎩ ᎨᏒ ᎤᏛᎯᏍᏔᏅᎩ ᎬᏩᏚᏫᏛ sonar ᎦᏙ ᎤᏍᏗ ᎠᎾᏍᎬᏘ ᏰᎵ ᏄᎵᏂᎬᎬᎾ ᎪᎯ ᎠᎦᏲᎳᏗᏍᏗ, ᎪᎯ ᎾᏂᎥ ᏴᏫ ᎠᎦᏎᏍᏙᏗ igidvnadi ᎨᏒᎢ ᏙᎢ ᎤᏂᎸᏉᏗ ᎪᎯ ᎢᎦ. ᏅᎠᏯᏍᏗ ᎭᏫᎾᏗᏢ ᎯᎠ ᎡᏍᎦᏂ ([http://www.ncbi.nlm.nih.gov/entrez/query.fcgi?cmd=search&db=pubmed&term=talpalar%20AND%20grossman. Talpalar & Grossman, 2005]) ᎠᎵᏍᏕᎸᏗ ᎯᎠ ᏗᎧᏃᏗᎢ Ꮎ ᎾᏍᎩ ᎨᏒᎢ ᎯᎠ ᎤᎾᏓᏟᏌᏅ ᎯᎠ ᎦᎸᎳᏗ ᎤᎳᏂᎬᎬ ᏄᏍᏗᏓᏅ ᎠᏍᏛᎩ-ᏗᎵᎬᏯᏍᏗ ᎬᏙᏗ ᎯᎠ ᎠᏓᏕᏯᏙᏗ ᎢᏳᎵᏍᏙᏗ ᎯᎠ sonar ᎦᏙ ᎤᏍᏗ ᏂᏕᎬᏂᏏᏍᎬ ᏓᏓᏁᏤᎸ ᎤᏢᏥᏰᏍᎩ ᎠᎴ ᎠᏍᏓᏅᏅ ᎤᏔᎾ ᎠᏣᏗ. ᎯᎠ ᎢᏴ, ᎦᎶᏒᏍᏔᏅ ᎾᎪᎯᏳᎲᏍᎬᎾ ᎦᏬᎯᎵᏴᏓ ᏂᎦᎳᏍᏗᏍᎬ ᏀᎢᏳᎨᏒ ᎠᏍᏛᎩ ᏗᎵᎬᏯᏍᏗ ᎠᎾᏍᎬᏘ ᎠᏓᏁᏟᏴᏍᎩ ᎣᏂᏯᎨᏍᏙᏗ ᎠᏓᏃᎯᏎᏗ ᎠᎴ ᎠᏛᎯᏍᏙᏗ ᎦᏣᏄᎳ ᎧᏁᏉᎩ.
+ᎠᏓᎵᏍᎦᎾᏁᏗ ᎯᎠ ᎤᏂᏃᏝᎩ ᎨᏒ ᎤᏛᎯᏍᏔᏅᎩ ᎬᏩᏚᏫᏛ sonar ᎦᏙ ᎤᏍᏗ ᎠᎾᏍᎬᏘ ᏰᎵ ᏄᎵᏂᎬᎬᎾ ᎪᎯ ᎠᎦᏲᎳᏗᏍᏗ, ᎪᎯ ᎾᏂᎥ ᏴᏫ ᎠᎦᏎᏍᏙᏗ ᎢᎩᏛᎾᏗ ᎨᏒᎢ ᏙᎢ ᎤᏂᎸᏉᏗ ᎪᎯ ᎢᎦ. ᏅᎠᏯᏍᏗ ᎭᏫᎾᏗᏢ ᎯᎠ ᎡᏍᎦᏂ<ref>[http://www.ncbi.nlm.nih.gov/entrez/query.fcgi?cmd=search&db=pubmed&term=talpalar%20AND%20grossman. Talpalar ᎠᎴ Grossman, 2005]</ref> ᎠᎵᏍᏕᎸᏗ ᎯᎠ ᏗᎧᏃᏗᎢ Ꮎ ᎾᏍᎩ ᎨᏒᎢ ᎯᎠ ᎤᎾᏓᏟᏌᏅ ᎯᎠ ᎦᎸᎳᏗ ᎤᎳᏂᎬᎬ ᏄᏍᏗᏓᏅ ᎠᏍᏛᎩ-ᏗᎵᎬᏯᏍᏗ ᎬᏙᏗ ᎯᎠ ᎠᏓᏕᏯᏙᏗ ᎢᏳᎵᏍᏙᏗ ᎯᎠ sonar ᎦᏙ ᎤᏍᏗ ᏂᏕᎬᏂᏏᏍᎬ ᏓᏓᏁᏤᎸ ᎤᏢᏥᏰᏍᎩ ᎠᎴ ᎠᏍᏓᏅᏅ ᎤᏔᎾ ᎠᏣᏗ. ᎯᎠ ᎢᏴ, ᎦᎶᏒᏍᏔᏅ ᎾᎪᎯᏳᎲᏍᎬᎾ ᎦᏬᎯᎵᏴᏓ ᏂᎦᎳᏍᏗᏍᎬ ᏀᎢᏳᎨᏒ ᎠᏍᏛᎩ ᏗᎵᎬᏯᏍᏗ ᎠᎾᏍᎬᏘ ᎠᏓᏁᏟᏴᏍᎩ ᎣᏂᏯᎨᏍᏙᏗ ᎠᏓᏃᎯᏎᏗ ᎠᎴ ᎠᏛᎯᏍᏙᏗ ᎦᏣᏄᎳ ᎧᏁᏉᎩ.
 
-ᎠᏍᏓᏩᏗᏒ ᏴᏫ ᎤᏁᏓᏍᏗ ᎤᏃᏝᎩ, ᎯᎠ Ꭴ.. ᎤᎵᏍᏕᎸᏗ ᏗᎦᎸᏫᏍᏓᏁᏗ ᎤᎭ ᏭᏪᏙᎢ ᎠᏓᏅᏒᎯ ᎾᎥᎢ ᎯᎠ Ꭴ.. ᏄᎬᏫᏳᏌᏕᎩ ᎠᏓᏅᏖᎢᏌᏅ ᎠᏎᎸᎯ ᎬᏙᏗ Ꮝ [[Low Frequency Active Sonar|ᎡᎳᏗ ᏄᎶᏒᏍᏛᎾ ᎢᏯᏛᏁᎯ Sonar]] ᏀᎢᏳᎨᏒ ᏅᏩᏙ ᎯᏯᏛ ᎠᎴᏰᏑ. ᎠᏁᎸᏙᏗ ᎾᎥᎢ ᎯᎠ UK-ᏚᎳᏏᏔᏅᎩ [[Whale and Dolphin Conservation Society|ᎤᏔᎾ ᎠᏣᏗ ᎠᎴ ᎠᎺᏉᎯ ᎦᏘᏍᏗ ᎤᎾᏙᏢᎯ]] ᎣᏤᎵ ᎢᎬᏁᎯ [[public inquiry|ᏴᏫ ᎤᏁᏓᏍᏗ ᎤᏂᎦᏛᎲᏍᎩ]] ᎾᏀᎢ ᎯᎠ ᏰᎵᏊ ᎦᏂᏰᎩ ᎯᎠ ᎠᏥᎸᏉᏗ ᏴᏫ ᎠᎺᏉᎯ ᎠᏂᏯᏫᏍᎩ ᎤᏤᎵ ᎢᏗᎦᏘᎭ (ᎯᎠ "2087" sonar ᎠᏓᎴᏂᏍᎬ ᎭᏫᎾᏗᏢ ᎥᏍᎩᏱ 2004) ᎤᎭ ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᎢᏅ ᎤᏄᎸᎾᎩ. ᎯᎠ [[European Parliament|European ᏗᏂᎳᏫᎩ]] ᏀᎾ ᎯᎠ ᏐᎢ ᎤᏬᏰᏂ ᎤᎭ ᏄᏓᏪᏎᎸ Ꮎ ᎦᎶᏒᏍᏔᏅ ᎠᏓᎸᏉᏙᏗ ᎠᏁᎳ ᏗᏓᏅᏗᏍᏙᏗ ᏂᏛᎴᏅᏓ ᎬᏗᏍᎬᎢ ᎯᎠ ᎤᎳᏂᎩᏛ sonar ᎢᏯᏛᏁᎵᏓᏍᏗ ᎠᎴᏰᏑ ᏄᏍᏗᏓᏅ ᏓᏓᏛᎾᏍᏗᏍᎬ ᎠᎦᏎᏍᏙᏗ ᎤᎭ ᏭᏪᏙᎢ ᎠᏫᏛᏓ ᎠᏥᏄᎪᏫᏍᎬ. <!-- Not at this address anymore, may need updating - <ref>{{cite web| url=http://home.businesswire.com/portal/site/google/index.jsp?ndmViewId=news_view&newsId=20041206005421&newsLang=en}}</ref> -->
+ᎠᏍᏓᏩᏗᏒ ᏴᏫ ᎤᏁᏓᏍᏗ ᎤᏃᏝᎩ, ᎯᎠ [[ᎠᎹᏰᏟ]] ᎤᎵᏍᏕᎸᏗ ᏗᎦᎸᏫᏍᏓᏁᏗ ᎤᎭ ᏭᏪᏙᎢ ᎠᏓᏅᏒᎯ ᎾᎥᎢ ᎯᎠ [[ᎠᎹᏰᏟ]] ᏄᎬᏫᏳᏌᏕᎩ ᎠᏓᏅᏖᎢᏌᏅ ᎠᏎᎸᎯ ᎬᏙᏗ Ꮝ [[Low Frequency Active Sonar|ᎡᎳᏗ ᏄᎶᏒᏍᏛᎾ ᎢᏯᏛᏁᎯ Sonar]] ᏀᎢᏳᎨᏒ ᏅᏩᏙ ᎯᏯᏛ ᎠᎴᏰᏑ. ᎠᏁᎸᏙᏗ ᎾᎥᎢ ᎯᎠ UK-ᏚᎳᏏᏔᏅᎩ [[Whale and Dolphin Conservation Society|ᎤᏔᎾ ᎠᏣᏗ ᎠᎴ ᎠᎺᏉᎯ ᎦᏘᏍᏗ ᎤᎾᏙᏢᎯ]] ᎣᏤᎵ ᎢᎬᏁᎯ [[public inquiry|ᏴᏫ ᎤᏁᏓᏍᏗ ᎤᏂᎦᏛᎲᏍᎩ]] ᎾᏀᎢ ᎯᎠ ᏰᎵᏊ ᎦᏂᏰᎩ ᎯᎠ ᎠᏥᎸᏉᏗ ᏴᏫ ᎠᎺᏉᎯ ᎠᏂᏯᏫᏍᎩ ᎤᏤᎵ ᎢᏗᎦᏘᎭ (ᎯᎠ "2087" sonar ᎠᏓᎴᏂᏍᎬ ᎭᏫᎾᏗᏢ ᎥᏍᎩᏱ 2004) ᎤᎭ ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᎢᏅ ᎤᏄᎸᎾᎩ. ᎯᎠ [[European Parliament|European ᏗᏂᎳᏫᎩ]] ᏀᎾ ᎯᎠ ᏐᎢ ᎤᏬᏰᏂ ᎤᎭ ᏄᏓᏪᏎᎸ Ꮎ ᎦᎶᏒᏍᏔᏅ ᎠᏓᎸᏉᏙᏗ ᎠᏁᎳ ᏗᏓᏅᏗᏍᏙᏗ ᏂᏛᎴᏅᏓ ᎬᏗᏍᎬᎢ ᎯᎠ ᎤᎳᏂᎩᏛ sonar ᎢᏯᏛᏁᎵᏓᏍᏗ ᎠᎴᏰᏑ ᏄᏍᏗᏓᏅ ᏓᏓᏛᎾᏍᏗᏍᎬ ᎠᎦᏎᏍᏙᏗ ᎤᎭ ᏭᏪᏙᎢ ᎠᏫᏛᏓ ᎠᏥᏄᎪᏫᏍᎬ. <!-- Not at this address anymore, may need updating - <ref>{{cite web| url=http://home.businesswire.com/portal/site/google/index.jsp?ndmViewId=news_view&newsId=20041206005421&newsLang=en}}</ref> -->
 
 ᎦᏘᏍᏗ ᎤᏃᏝᎩ Ꮎ seismic ᎠᎦᏛᏗ ᎬᏔᏅᎯ ᎾᏍᎩᎾᎢ ᎪᎢ ᎠᎴ ᎠᏥᎸ ᎠᏓᏪᎳᎩᏍᎩ ᎤᏂᎦᏛᎲᏍᎩ ᎠᎾᏍᎬᏘ ᎾᏍᎩ ᎾᏍᏇ ᎤᏲᏨᎯ ᎯᎠ ᎠᏛᎩᏍᎬ ᎠᎴ ᎤᏃᏴᎬ ᏂᏓᏳᏨᏓ ᎦᎷᎯᏍᏗ ᏰᎵᏇ ᎢᎬᏁᏗ ᎤᏔᎾ ᎠᏣᏗ. ᎤᏅᏌ ᎾᏍᎩ ᎾᏍᏇ ᎧᏁᎢᏍᏙᏗ Ꮎ ᎠᏓᏅᏍᏗ ᎭᏫᎾᏗᏢ magnetic ᏕᎦᎶᎨᏒ ᎢᎬᏂᏌᏅᎯ ᎾᎥᎢ ᎯᎠ ᎠᎦᏛᏗ ᎠᎾᏍᎬᏘ ᎾᏍᎩ ᎾᏍᏇ ᎾᏍᏋ ᎤᎾᏚᏓᎸ ᎾᏍᎩᎾᎢ ᎠᎹᏳᎳᏗ. <ref>{{cite web| url=http://www.sustainability.ca/Docs/Impact%20of%20Seismic%20Surveys%20on%20Whales.pdf?CFID=9951883&CFTOKEN=72165442| title=Seismic testing and the impacts of high intensity sound on whales| accessdate=2006-09-14}}</ref>
 
 ᎢᎦᏛ ᎠᏓᏅᏖᏗ ᎠᎴ ᏄᏍᏗᏓᏅ ᎧᏁᎢᏍᏙᏗ Ꮎ ᎢᎦᏛ ᎤᏔᎾ ᎠᏣᏗ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᎾᏍᎩ ᎾᏍᏇ ᎦᎾᏰᎬ ᎤᏍᏆᎸᎲ ᏎᏍᏗ ᏐᎢ ᏴᏫ ᎠᎵᏂᎬᏁᏗᎢ ᏯᏛᎿ ᏥᏄᏍᏗ ᎯᎠ ᎪᏢᎯᏐᏗ ᎬᏙᏗ ᎠᎾᏑᎲᏍᎬ ᏰᎵ ᏄᎵᏂᎬᎬᎾ, Ꮎ ᎢᏳᏓᎵᎭ ᎦᏂᏴᏗ ᏂᎦᎥᏇ Ꮎ ᎠᏓᏬᏍᏗ ᎾᏀᎢ ᎠᏂ, ᎠᎵᏖᎸᏗ ᎬᏙᏗ ᏥᏳ ᏧᏔᏅ,  adahihi ᎠᎴ ᎯᎠ ᎤᎾᏓᏟᏌᏅ adahihi [[Persistent Organic Pollutant|ᎠᎧᏁᏍᏗ]] ᏄᎾᏛᏅ ᏐᎢ ᎠᏓᎾᏄᎳᏗ.
 
-== ᎠᎪᏩᏛᏗ ᎾᏍᎩ ᎾᏍᏇ ==
+== ᎯᎪᏩᏔ ᎾᏍᎦ ᎾᏍᏇ ==
 * [[Cetacea]] (ᎢᎦᎢ ᎨᏐ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᏙᎪᏩᎸ)
 * [[Baleen whale|ᏗᏓᏁᏍᎩ ᎤᏔᎾ ᎠᏣᏗ]]
 * [[Toothed whale|ᎦᏅᏙᎬ ᎤᏔᎾ ᎠᏣᏗ]]
@@ -97,16 +91,13 @@ Cetaceans ᎤᏂᏯᏙᎸ ᎾᏀᎢ ᏔᎵ ᎠᏓᏅᏍᏗ:
 * [[Whale song|ᎤᏔᎾ ᎠᏣᏗ ᎧᏃᎩᏍᏗ]]
 * [[Whale watching|ᎤᏔᎾ ᎠᏣᏗ ᎠᎦᎦᏎᏍᏗ]]
 
+== ᏓᏓᏚᎬ ᎪᏪᎵ ==
+{{reflist}}
+
 == ᏫᏓᏎᎸᎢ ==
-<div class="references-small"><references/></div>
+* Carwardine, M. (2000).  ''[[Whales, Dolphins and Porpoises|ᎤᏔᎾ ᎠᏂᏣᏗ, ᎠᎺᏉᎯ, ᎠᎴ Porpoises]]''. [[ᏄᏯᎩ]]: Dorling Kindersley. ISBN 0-7513-2781-6.
 
-;ᏂᎦᎥ ᏫᏓᏎᎸᎢ
-<div class="references-small">
-* {{cite book |last=Carwardine |first=M.| date=2000 |title=Whales, Dolphins and Porpoises| publisher=Dorling Kindersley| id= ISBN 0-7513-2781-6}}
-</div>
-
-== ᎤᏓᏎᎦᏤᏗ ᏗᏕᎬᏔᏛ ==
-<!-- * [Cetacea]Link Removed… website currently on hiatus. -->
+== ᏙᏯᏗᏢ ᏗᏕᎬᏔᏛ ==
 * [http://www.pbs.org/wgbh/evolution/library/03/4/l_034_05.html Whale Evolution]
 * [http://oceans.greenpeace.org/en/our-oceans/whaling Greenpeace work defending whales]
 * [http://savethewhales.org/stwsong_hi.html Save the Whales, founded in 1977]
